--- a/po/sk/kiconedit.po
+++ b/po/sk/kiconedit.po
@@ -356,8 +356,8 @@ msgstr ""
 "\n"
 "Mrie¾ka kreslenia ikon je oblas», kde mô¾ete kresli» ikonky.\n"
 "Mô¾ete si ju zväè¹ova» a zmen¹ova» lupou na paneli nástrojov.\n"
-"(Tip: Prid¾te tlaèítko zväè¹enia na pár sekúnd a dostanete sa "
-"na predefinovanú veµkost.)"
+"(Tip: Prid¾te tlaèítko zväè¹enia na pár sekúnd a dostanete sa na "
+"predefinovanú veµkost.)"
 
 #: kiconedit.cpp:744
 msgid ""
@@ -384,8 +384,8 @@ msgid ""
 msgstr ""
 "Stavový riadok\n"
 "\n"
-"Stavový riadok vám poskytuje informácie o stave aktuálnej ikonky. "
-"Má nasledovné polo¾ky :\n"
+"Stavový riadok vám poskytuje informácie o stave aktuálnej ikonky. Má "
+"nasledovné polo¾ky :\n"
 "\n"
 "\t- Pozícia kurzoru\n"
 "\t- Veµkos»\n"
@@ -546,7 +546,6 @@ msgstr ""
 "Namapuje súèasnú ikonku do ¹edej ¹kály (do odtieòov ¹edi).\n"
 "(Varovanie: Výsledok bude pravdepodobne obsahova» farby, ktoré sa\n"
 "nenachádzajú v palete farieb)."
-
 
 #: kiconedit.cpp:806
 msgid ""
@@ -748,8 +747,8 @@ msgstr ""
 "\n"
 "Zma¾e body. Nastaví body na priehµadnú farbu\n"
 "\n"
-"(Tip: Ak chcete kresli» priehµadnou farbou s iným nástrojom, kliknite "
-"najprv na \"Maza»\" a potom na nástroj, ktorý chcete pou¾i»)"
+"(Tip: Ak chcete kresli» priehµadnou farbou s iným nástrojom, kliknite najprv "
+"na \"Maza»\" a potom na nástroj, ktorý chcete pou¾i»)"
 
 #: kicongrid.cpp:579
 msgid "There was an error loading a blank image.\n"
