--- a/po/zh_TW.Big5/kghostview.po
+++ b/po/zh_TW.Big5/kghostview.po
@@ -6,18 +6,47 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: kghostview\n"
-"POT-Creation-Date: 1998-06-18 22:44+0200\n"
+"POT-Creation-Date: 1998-10-01 13:38+0200\n"
 "PO-Revision-Date: 1998-04-21 02:55+0800\n"
 "Last-Translator: Chou Yeh-Jyi <ycchou@ccca.nctu.edu.tw>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: ENCODING\n"
 
+#: marklist.cpp:38
+msgid "Mark current page"
+msgstr "標示目前頁"
+
+#: marklist.cpp:39
+msgid "Mark all pages"
+msgstr "標示全部"
+
+#: marklist.cpp:40
+msgid "Mark even pages"
+msgstr "標示偶數頁"
+
+#: marklist.cpp:41
+msgid "Mark odd pages"
+msgstr "標示奇數頁"
+
+#: marklist.cpp:42
+msgid "Toggle page marks"
+msgstr "切換標示頁"
+
+#: marklist.cpp:43
+msgid "Remove page marks"
+msgstr "移除標示"
+
+#: marklist.cpp:367
+#, fuzzy
+msgid "Page"
+msgstr "頁"
+
 #: copyright.cpp:27
 msgid "Copyright"
 msgstr "版權宣告"
 
-#: copyright.cpp:41
+#: copyright.cpp:41 kghostview.cpp:618
 msgid ""
 "\n"
 "This program is free software; you can redistribute it and/or modify\n"
@@ -34,35 +63,6 @@ msgid ""
 "along with this program; if not, write to the Free Software\n"
 "Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA."
 msgstr ""
-
-#: goto.cpp:54
-#, fuzzy
-msgid "&Section"
-msgstr "節"
-
-#: goto.cpp:70
-#, fuzzy
-msgid "&Page"
-msgstr "頁"
-
-#: goto.cpp:123 goto.cpp:130 goto.cpp:147 kghostview.cpp:2240
-#: kghostview.cpp:2252 kghostview.cpp:2257 kghostview.cpp:2540
-#, c-format
-msgid "of %d"
-msgstr ""
-
-#: info.cpp:45
-#, fuzzy
-msgid "File name :"
-msgstr "檔案 :"
-
-#: info.cpp:53
-msgid "Document title :"
-msgstr "文件標題 :"
-
-#: info.cpp:61
-msgid "Publication date :"
-msgstr "出版日期 :"
 
 #: interpreter.cpp:42
 msgid "General"
@@ -120,548 +120,9 @@ msgstr "圖形[&P]"
 msgid "&Backing store"
 msgstr ""
 
-#: interpreter.cpp:244 kkeydialog.cpp:233
-#, fuzzy
-msgid "&Defaults"
-msgstr "預設[&D]"
-
 #: interpreter.cpp:314
 msgid "gs"
 msgstr ""
-
-#: kaccel.cpp:169
-msgid "CTRL+O"
-msgstr ""
-
-#: kaccel.cpp:173
-msgid "CTRL+N"
-msgstr ""
-
-#: kaccel.cpp:177
-msgid "CTRL+W"
-msgstr ""
-
-#: kaccel.cpp:181
-msgid "CTRL+S"
-msgstr ""
-
-#: kaccel.cpp:185
-msgid "CTRL+P"
-msgstr ""
-
-#: kaccel.cpp:189
-msgid "CTRL+Q"
-msgstr ""
-
-#: kaccel.cpp:193
-msgid "CTRL+X"
-msgstr ""
-
-#: kaccel.cpp:197
-msgid "CTRL+C"
-msgstr ""
-
-#: kaccel.cpp:201
-msgid "CTRL+V"
-msgstr ""
-
-#: kaccel.cpp:205
-msgid "CTRL+Z"
-msgstr ""
-
-#: kaccel.cpp:209
-msgid "CTRL+F"
-msgstr ""
-
-#: kaccel.cpp:213
-msgid "CTRL+R"
-msgstr ""
-
-#: kaccel.cpp:216 kaccel.cpp:443
-msgid "Insert"
-msgstr ""
-
-#: kaccel.cpp:217
-msgid "CTRL+Insert"
-msgstr ""
-
-#: kaccel.cpp:221
-msgid "CTRL+Home"
-msgstr ""
-
-#: kaccel.cpp:224 kaccel.cpp:449
-msgid "End"
-msgstr ""
-
-#: kaccel.cpp:225
-msgid "CTRL+End"
-msgstr ""
-
-#: kaccel.cpp:228 kaccel.cpp:229 kaccel.cpp:452
-msgid "Prior"
-msgstr ""
-
-#: kaccel.cpp:232 kaccel.cpp:233 kaccel.cpp:455
-msgid "Next"
-msgstr ""
-
-#: kaccel.cpp:237
-msgid "F1"
-msgstr ""
-
-#: kghostview.cpp:199
-msgid "Document information"
-msgstr "文件資訊"
-
-#: kghostview.cpp:213
-#, fuzzy
-msgid "Page Setup"
-msgstr "印表機設定"
-
-#: kghostview.cpp:353 kghostview.cpp:374 kghostview.cpp:443
-msgid "View Control"
-msgstr "顯示控制"
-
-#: kghostview.cpp:354 kghostview.cpp:375 kghostview.cpp:448
-msgid "Go To Page"
-msgstr "跳至頁數"
-
-#: kghostview.cpp:355 kghostview.cpp:376 kghostview.cpp:441
-msgid "Zoom In"
-msgstr "放大"
-
-#: kghostview.cpp:356 kghostview.cpp:377 kghostview.cpp:442
-msgid "Zoom Out"
-msgstr "縮小"
-
-#: kghostview.cpp:357 kghostview.cpp:378 kghostview.cpp:446
-msgid "Next Page"
-msgstr "下一頁"
-
-#: kghostview.cpp:358 kghostview.cpp:379 kghostview.cpp:447
-msgid "Prev Page"
-msgstr "前一頁"
-
-#: kghostview.cpp:359 kghostview.cpp:380
-msgid "Scroll Up"
-msgstr "往上捲動"
-
-#: kghostview.cpp:360 kghostview.cpp:381
-msgid "Scroll Down"
-msgstr "往下捲動"
-
-#: kghostview.cpp:361 kghostview.cpp:382
-msgid "Scroll Left"
-msgstr "往左捲動"
-
-#: kghostview.cpp:362 kghostview.cpp:383
-msgid "Scroll Right"
-msgstr "往右捲動"
-
-#: kghostview.cpp:363 kghostview.cpp:384 kghostview.cpp:444
-msgid "Redisplay"
-msgstr "重繪"
-
-#: kghostview.cpp:406 kghostview.cpp:408
-msgid "Not known"
-msgstr "未知"
-
-#: kghostview.cpp:419
-msgid "Configure interpreter"
-msgstr "設定解譯器"
-
-#: kghostview.cpp:494
-msgid "&Open ..."
-msgstr "開啟[&O] ..."
-
-#: kghostview.cpp:495
-msgid "Open &recent"
-msgstr "最近開啟文件[&R]"
-
-#: kghostview.cpp:503
-#, fuzzy
-msgid "Page Set&up ..."
-msgstr "設定[&S] ..."
-
-#: kghostview.cpp:505
-msgid "&Print ..."
-msgstr "列印[&P] ..."
-
-#: kghostview.cpp:513
-msgid "Zoom &in"
-msgstr "放大[&I]"
-
-#: kghostview.cpp:515
-msgid "Zoom &out"
-msgstr "縮小[&O]"
-
-#: kghostview.cpp:517
-#, fuzzy
-msgid "&Zoom ..."
-msgstr "資訊[&I] ..."
-
-#: kghostview.cpp:522
-msgid "&Info ..."
-msgstr "資訊[&I] ..."
-
-#: kghostview.cpp:527
-msgid "&Previous Page"
-msgstr "前一頁[&P]"
-
-#: kghostview.cpp:529
-msgid "&Next page"
-msgstr "下一頁[&N]"
-
-#: kghostview.cpp:531
-msgid "&Go to page ..."
-msgstr "跳至...頁[&G]"
-
-#: kghostview.cpp:534
-msgid "Go to &start"
-msgstr "跳至開頭[&S]"
-
-#: kghostview.cpp:536
-msgid "Go to &end"
-msgstr "跳至最後[&E]"
-
-#: kghostview.cpp:538
-msgid "&Read down"
-msgstr "往下讀[&R]"
-
-#: kghostview.cpp:543
-msgid "Mark &current page"
-msgstr "標示目前頁[&C]"
-
-#: kghostview.cpp:546
-msgid "Mark &all pages"
-msgstr "標示全部[&A]"
-
-#: kghostview.cpp:548
-msgid "Mark &even pages"
-msgstr "標示偶數頁[&E]"
-
-#: kghostview.cpp:550
-msgid "Mark &odd pages"
-msgstr "標示奇數頁[&O]"
-
-#: kghostview.cpp:553
-msgid "&Toggle page marks"
-msgstr "切換標示[&T]"
-
-#: kghostview.cpp:556
-msgid "&Remove page marks"
-msgstr "移除標示[&R]"
-
-#: kghostview.cpp:567
-msgid "Show &tool bar"
-msgstr "顯示工具列[&T]"
-
-#: kghostview.cpp:568
-msgid "Show st&atus bar"
-msgstr "顯示狀態列[&A]"
-
-#: kghostview.cpp:569
-msgid "Show &page list"
-msgstr "顯示頁列表[&P]"
-
-#: kghostview.cpp:571
-msgid "Configure &interpreter ..."
-msgstr "設定解譯器[&I] ..."
-
-#: kghostview.cpp:572
-msgid "Configure &key bindings ..."
-msgstr "設定按鍵功\能[&K] ..."
-
-#: kghostview.cpp:574
-msgid "&Save options"
-msgstr "儲存選項[&S]"
-
-#: kghostview.cpp:581
-msgid "&About this application"
-msgstr "有關這個應用程式[&A]"
-
-#: kghostview.cpp:583
-msgid "&Help for this application"
-msgstr "解說這個應用程式[&H]"
-
-#: kghostview.cpp:585
-msgid "&Copyright"
-msgstr "版權[&C]"
-
-#: kghostview.cpp:592
-msgid "&Go"
-msgstr "跳至[&G]"
-
-#: kghostview.cpp:593
-msgid "&Pagemarks"
-msgstr "標示頁[&P]"
-
-#: kghostview.cpp:661
-msgid "New window ..."
-msgstr "新視窗 ..."
-
-#: kghostview.cpp:664
-#, fuzzy
-msgid "Open file ..."
-msgstr "開啟 ..."
-
-#: kghostview.cpp:672
-#, fuzzy
-msgid "Print document ..."
-msgstr "列印文件 ..."
-
-#: kghostview.cpp:677
-#, fuzzy
-msgid "Zoom in"
-msgstr "放大"
-
-#: kghostview.cpp:680
-#, fuzzy
-msgid "Zoom out"
-msgstr "縮小"
-
-#: kghostview.cpp:685
-msgid "Go back"
-msgstr "往後"
-
-#: kghostview.cpp:688
-msgid "Go forward"
-msgstr "往前"
-
-#: kghostview.cpp:691
-msgid "Go to page ..."
-msgstr "跳至...頁"
-
-#: kghostview.cpp:696
-msgid "Go to start"
-msgstr "跳至開頭"
-
-#: kghostview.cpp:699
-msgid "Go to end"
-msgstr "跳至最後"
-
-#: kghostview.cpp:702
-msgid "Read down the page"
-msgstr "此頁往下讀"
-
-#: kghostview.cpp:707
-#, fuzzy
-msgid "Toggle this page mark"
-msgstr "切換標示頁"
-
-#: kghostview.cpp:729
-msgid "Sc.100 of 100  P.100 of 100"
-msgstr "章節: 100 of 100  頁數:100 of 100"
-
-#: kghostview.cpp:730
-#, c-format
-msgid "100 %"
-msgstr ""
-
-#: kghostview.cpp:731
-msgid "Upside Down"
-msgstr ""
-
-#: kghostview.cpp:756
-msgid "Malformed URL."
-msgstr "不正確的 URL"
-
-#: kghostview.cpp:768
-msgid ""
-"Already waiting\n"
-"for an internet job to finish.\n"
-"Please wait until has finished.\n"
-"Alternatively stop the running one."
-msgstr ""
-
-#: kghostview.cpp:777
-msgid "Could not start or find KFM."
-msgstr "找不到或無法啟動 KFM"
-
-#: kghostview.cpp:1217 kghostview.cpp:2331 viewcontrol.cpp:64
-msgid "Portrait"
-msgstr ""
-
-#: kghostview.cpp:1219 kghostview.cpp:2337 viewcontrol.cpp:65
-msgid "Landscape"
-msgstr ""
-
-#: kghostview.cpp:1221 kghostview.cpp:2335 viewcontrol.cpp:66
-msgid "Seascape"
-msgstr ""
-
-#: kghostview.cpp:1223 kghostview.cpp:2333 viewcontrol.cpp:67
-msgid "Upside down"
-msgstr ""
-
-#: kghostview.cpp:1262
-msgid "Go to ..."
-msgstr "跳至 ..."
-
-#: kghostview.cpp:1337
-#, fuzzy
-msgid "Zoom"
-msgstr "放大"
-
-#: kghostview.cpp:1523
-msgid "Version 0.6"
-msgstr "版本: 0.6"
-
-#: kghostview.cpp:1524
-msgid "Sorry, not ready yet"
-msgstr "抱歉, 尚未準備好"
-
-#: kghostview.cpp:1531
-msgid "About kghostview"
-msgstr "有關 kghostview"
-
-#: kghostview.cpp:1532
-msgid ""
-"Version :\t0.6 alpha\n"
-"Author : Mark Donohoe\n"
-"Mail : donohoe@kde.org"
-msgstr ""
-
-#: kghostview.cpp:1584 kghostview.cpp:1700
-msgid "Error printing"
-msgstr "列印發生錯誤"
-
-#: kghostview.cpp:1594
-msgid ""
-"You chose to print all pages to a file.\n"
-"This would produce a document identical to\n"
-"that currently loaded into the viewer.\n"
-"There is no need to print all pages into a new file."
-msgstr ""
-"您選擇列印全部頁到一個檔案中.\n"
-"這個動作將會導致此檔案與目前\n"
-"讀入的文件完全相同.\n"
-"不需要列印全部頁至新檔案中."
-
-#: kghostview.cpp:1607
-msgid ""
-"No file name was given so\n"
-"nothing could be printed to a file.\n"
-msgstr ""
-"沒有指定檔案名稱\n"
-"不會印任何東西到檔案中.\n"
-
-#: kghostview.cpp:1665
-#, fuzzy, c-format
-msgid "Print failure : %s"
-msgstr "列印失效 : %s"
-
-#: kghostview.cpp:1701
-msgid ""
-"Printing failed because the list of\n"
-"pages to be printed was empty.\n"
-msgstr ""
-"列印失敗: \n"
-"因為列印頁列表是空的\n"
-
-#: kghostview.cpp:2234 kghostview.cpp:2246 kghostview.cpp:2511
-#: kghostview.cpp:2534
-msgid "of 1    "
-msgstr ""
-
-#: kghostview.cpp:2236 kghostview.cpp:2248 kghostview.cpp:2536
-#, c-format
-msgid "of %d    "
-msgstr ""
-
-#: kghostview.cpp:2238 kghostview.cpp:2250 kghostview.cpp:2538
-#: kghostview.cpp:2545
-#, c-format
-msgid "of %d  "
-msgstr ""
-
-#: kghostview.cpp:2510
-msgid "Sc.1 "
-msgstr "章節.1 "
-
-#: kghostview.cpp:2513
-msgid "P.1 "
-msgstr "頁數.1 "
-
-#: kghostview.cpp:2515 kghostview.cpp:2528
-#, c-format
-msgid "P.%d "
-msgstr "頁數.%d "
-
-#: kghostview.cpp:2530
-#, c-format
-msgid "Sc.%d "
-msgstr "章節.%d "
-
-#: kkeydialog.cpp:312
-msgid "Current key"
-msgstr "目前按鍵"
-
-#: kkeydialog.cpp:323
-#, fuzzy
-msgid "&Action"
-msgstr "動作[&A]"
-
-#: kkeydialog.cpp:382
-msgid "&No key"
-msgstr "無按鍵對應[&N]"
-
-#: kkeydialog.cpp:390
-#, fuzzy
-msgid "&Default key"
-msgstr "預設按鍵[&D]"
-
-#: kkeydialog.cpp:398
-msgid "&Custom key"
-msgstr "自定按鍵[&C]"
-
-#: main.cpp:25
-#, fuzzy
-msgid "Usage: "
-msgstr "用法: "
-
-#: main.cpp:27
-#, fuzzy
-msgid ""
-" [filename] [siwtches]\n"
-"\n"
-msgstr ""
-" [檔案名稱] [選項]\n"
-"\n"
-
-#: main.cpp:28
-msgid ""
-"See KDE and Qt documentation for\n"
-"command line options.\n"
-msgstr ""
-
-#: main.cpp:30
-msgid "Error on command line"
-msgstr "命令列指令錯誤"
-
-#: marklist.cpp:38
-msgid "Mark current page"
-msgstr "標示目前頁"
-
-#: marklist.cpp:39
-msgid "Mark all pages"
-msgstr "標示全部"
-
-#: marklist.cpp:40
-msgid "Mark even pages"
-msgstr "標示偶數頁"
-
-#: marklist.cpp:41
-msgid "Mark odd pages"
-msgstr "標示奇數頁"
-
-#: marklist.cpp:42
-msgid "Toggle page marks"
-msgstr "切換標示頁"
-
-#: marklist.cpp:43
-msgid "Remove page marks"
-msgstr "移除標示"
 
 #: messages.cpp:29
 msgid "Ghostscript messages"
@@ -674,6 +135,19 @@ msgstr "清除[&C]"
 #: messages.cpp:59
 msgid "&Dismiss"
 msgstr "駁回[&D]"
+
+#: info.cpp:45
+#, fuzzy
+msgid "File name :"
+msgstr "檔案 :"
+
+#: info.cpp:53
+msgid "Document title :"
+msgstr "文件標題 :"
+
+#: info.cpp:61
+msgid "Publication date :"
+msgstr "出版日期 :"
 
 #: print.cpp:35
 #, fuzzy
@@ -752,6 +226,38 @@ msgstr ""
 "範圍必須是這個文件的頁數範圍內.\n"
 "檢查狀態列以獲得相關資訊.\n"
 
+#: goto.cpp:54
+#, fuzzy
+msgid "&Section"
+msgstr "節"
+
+#: goto.cpp:70
+#, fuzzy
+msgid "&Page"
+msgstr "頁"
+
+#: goto.cpp:123 goto.cpp:130 goto.cpp:147 kghostview.cpp:2225
+#: kghostview.cpp:2237 kghostview.cpp:2242 kghostview.cpp:2525
+#, c-format
+msgid "of %d"
+msgstr ""
+
+#: kghostview.cpp:1221 kghostview.cpp:2316 viewcontrol.cpp:64
+msgid "Portrait"
+msgstr ""
+
+#: kghostview.cpp:1223 kghostview.cpp:2322 viewcontrol.cpp:65
+msgid "Landscape"
+msgstr ""
+
+#: kghostview.cpp:1225 kghostview.cpp:2320 viewcontrol.cpp:66
+msgid "Seascape"
+msgstr ""
+
+#: kghostview.cpp:1227 kghostview.cpp:2318 viewcontrol.cpp:67
+msgid "Upside down"
+msgstr ""
+
 #: viewcontrol.cpp:75
 #, fuzzy
 msgid "magnification"
@@ -771,10 +277,436 @@ msgstr "方位[&O]"
 msgid "&Apply"
 msgstr "套用[&A]"
 
+#: main.cpp:25
+#, fuzzy
+msgid "Usage: "
+msgstr "用法: "
+
+#: main.cpp:27
+#, fuzzy
+msgid ""
+" [filename] [siwtches]\n"
+"\n"
+msgstr ""
+" [檔案名稱] [選項]\n"
+"\n"
+
+#: main.cpp:28
+msgid ""
+"See KDE and Qt documentation for\n"
+"command line options.\n"
+msgstr ""
+
+#: main.cpp:30
+msgid "Error on command line"
+msgstr "命令列指令錯誤"
+
+#: kghostview.cpp:206
+msgid "Document information"
+msgstr "文件資訊"
+
+#: kghostview.cpp:220
+#, fuzzy
+msgid "Page Setup"
+msgstr "印表機設定"
+
+#: kghostview.cpp:360 kghostview.cpp:449
+msgid "View Control"
+msgstr "顯示控制"
+
+#: kghostview.cpp:361 kghostview.cpp:454
+msgid "Go To Page"
+msgstr "跳至頁數"
+
+#: kghostview.cpp:362 kghostview.cpp:447
+msgid "Zoom In"
+msgstr "放大"
+
+#: kghostview.cpp:363 kghostview.cpp:448
+msgid "Zoom Out"
+msgstr "縮小"
+
+#: kghostview.cpp:364 kghostview.cpp:452
+msgid "Next Page"
+msgstr "下一頁"
+
+#: kghostview.cpp:365 kghostview.cpp:453
+msgid "Prev Page"
+msgstr "前一頁"
+
+#: kghostview.cpp:366
+msgid "Scroll Up"
+msgstr "往上捲動"
+
+#: kghostview.cpp:367
+msgid "Scroll Down"
+msgstr "往下捲動"
+
+#: kghostview.cpp:368
+msgid "Scroll Left"
+msgstr "往左捲動"
+
+#: kghostview.cpp:369
+msgid "Scroll Right"
+msgstr "往右捲動"
+
+#: kghostview.cpp:370 kghostview.cpp:450
+msgid "Redisplay"
+msgstr "重繪"
+
+#: kghostview.cpp:413 kghostview.cpp:415
+msgid "Not known"
+msgstr "未知"
+
+#: kghostview.cpp:426
+msgid "Configure interpreter"
+msgstr "設定解譯器"
+
+#: kghostview.cpp:500
+msgid "&Open ..."
+msgstr "開啟[&O] ..."
+
+#: kghostview.cpp:501
+msgid "Open &recent"
+msgstr "最近開啟文件[&R]"
+
+#: kghostview.cpp:509
+#, fuzzy
+msgid "Page Set&up ..."
+msgstr "設定[&S] ..."
+
+#: kghostview.cpp:511
+msgid "&Print ..."
+msgstr "列印[&P] ..."
+
+#: kghostview.cpp:519
+msgid "Zoom &in"
+msgstr "放大[&I]"
+
+#: kghostview.cpp:521
+msgid "Zoom &out"
+msgstr "縮小[&O]"
+
+#: kghostview.cpp:523
+#, fuzzy
+msgid "&Zoom ..."
+msgstr "資訊[&I] ..."
+
+#: kghostview.cpp:528
+msgid "&Info ..."
+msgstr "資訊[&I] ..."
+
+#: kghostview.cpp:533
+msgid "&Previous Page"
+msgstr "前一頁[&P]"
+
+#: kghostview.cpp:535
+msgid "&Next page"
+msgstr "下一頁[&N]"
+
+#: kghostview.cpp:537
+msgid "&Go to page ..."
+msgstr "跳至...頁[&G]"
+
+#: kghostview.cpp:540
+msgid "Go to &start"
+msgstr "跳至開頭[&S]"
+
+#: kghostview.cpp:542
+msgid "Go to &end"
+msgstr "跳至最後[&E]"
+
+#: kghostview.cpp:544
+msgid "&Read down"
+msgstr "往下讀[&R]"
+
+#: kghostview.cpp:549
+msgid "Mark &current page"
+msgstr "標示目前頁[&C]"
+
+#: kghostview.cpp:552
+msgid "Mark &all pages"
+msgstr "標示全部[&A]"
+
+#: kghostview.cpp:554
+msgid "Mark &even pages"
+msgstr "標示偶數頁[&E]"
+
+#: kghostview.cpp:556
+msgid "Mark &odd pages"
+msgstr "標示奇數頁[&O]"
+
+#: kghostview.cpp:559
+msgid "&Toggle page marks"
+msgstr "切換標示[&T]"
+
+#: kghostview.cpp:562
+msgid "&Remove page marks"
+msgstr "移除標示[&R]"
+
+#: kghostview.cpp:573
+msgid "Show &tool bar"
+msgstr "顯示工具列[&T]"
+
+#: kghostview.cpp:574
+msgid "Show st&atus bar"
+msgstr "顯示狀態列[&A]"
+
+#: kghostview.cpp:575
+msgid "Show &page list"
+msgstr "顯示頁列表[&P]"
+
+#: kghostview.cpp:577
+msgid "Configure &interpreter ..."
+msgstr "設定解譯器[&I] ..."
+
+#: kghostview.cpp:578
+msgid "Configure &key bindings ..."
+msgstr "設定按鍵功\能[&K] ..."
+
+#: kghostview.cpp:580
+msgid "&Save options"
+msgstr "儲存選項[&S]"
+
+#: kghostview.cpp:587
+msgid "&About this application"
+msgstr "有關這個應用程式[&A]"
+
+#: kghostview.cpp:589
+msgid "&Help for this application"
+msgstr "解說這個應用程式[&H]"
+
+#: kghostview.cpp:591
+msgid "&Copyright"
+msgstr "版權[&C]"
+
+#: kghostview.cpp:598
+msgid "&Go"
+msgstr "跳至[&G]"
+
+#: kghostview.cpp:599
+msgid "&Pagemarks"
+msgstr "標示頁[&P]"
+
+#: kghostview.cpp:608
+msgid ""
+" - the PostScript document viewer for\n"
+"the K Desktop Environment.\n"
+"\n"
+"Written by Mark Donohoe <donohoe@kde.org>, based on original\n"
+"work by Tim Theisen.\n"
+"\n"
+"Incorporates code from Johanes Plass' gv. This adds compressed and\n"
+"PDF file support.\n"
+"\n"
+"See http://wwwthep.physik.uni-mainz.de/~plass/gv/n"
+msgstr ""
+
+#: kghostview.cpp:665
+msgid "New window ..."
+msgstr "新視窗 ..."
+
+#: kghostview.cpp:668
+#, fuzzy
+msgid "Open file ..."
+msgstr "開啟 ..."
+
+#: kghostview.cpp:676
+#, fuzzy
+msgid "Print document ..."
+msgstr "列印文件 ..."
+
+#: kghostview.cpp:681
+#, fuzzy
+msgid "Zoom in"
+msgstr "放大"
+
+#: kghostview.cpp:684
+#, fuzzy
+msgid "Zoom out"
+msgstr "縮小"
+
+#: kghostview.cpp:689
+msgid "Go back"
+msgstr "往後"
+
+#: kghostview.cpp:692
+msgid "Go forward"
+msgstr "往前"
+
+#: kghostview.cpp:695
+msgid "Go to page ..."
+msgstr "跳至...頁"
+
+#: kghostview.cpp:700
+msgid "Go to start"
+msgstr "跳至開頭"
+
+#: kghostview.cpp:703
+msgid "Go to end"
+msgstr "跳至最後"
+
+#: kghostview.cpp:706
+msgid "Read down the page"
+msgstr "此頁往下讀"
+
+#: kghostview.cpp:711
+#, fuzzy
+msgid "Toggle this page mark"
+msgstr "切換標示頁"
+
+#: kghostview.cpp:733
+msgid "Sc.100 of 100  P.100 of 100"
+msgstr "章節: 100 of 100  頁數:100 of 100"
+
+#: kghostview.cpp:734
+#, c-format
+msgid "100 %"
+msgstr ""
+
+#: kghostview.cpp:735
+msgid "Upside Down"
+msgstr ""
+
+#: kghostview.cpp:760
+msgid "Malformed URL."
+msgstr "不正確的 URL"
+
+#: kghostview.cpp:772
+msgid ""
+"Already waiting\n"
+"for an internet job to finish.\n"
+"Please wait until has finished.\n"
+"Alternatively stop the running one."
+msgstr ""
+
+#: kghostview.cpp:781
+msgid "Could not start or find KFM."
+msgstr "找不到或無法啟動 KFM"
+
+#: kghostview.cpp:1266
+msgid "Go to ..."
+msgstr "跳至 ..."
+
+#: kghostview.cpp:1508
+msgid "Version 0.6"
+msgstr "版本: 0.6"
+
+#: kghostview.cpp:1509
+msgid "Sorry, not ready yet"
+msgstr "抱歉, 尚未準備好"
+
+#: kghostview.cpp:1516
+msgid "About kghostview"
+msgstr "有關 kghostview"
+
+#: kghostview.cpp:1517
+msgid ""
+"Version :\t0.6 alpha\n"
+"Author : Mark Donohoe\n"
+"Mail : donohoe@kde.org"
+msgstr ""
+
+#: kghostview.cpp:1569 kghostview.cpp:1685
+msgid "Error printing"
+msgstr "列印發生錯誤"
+
+#: kghostview.cpp:1579
+msgid ""
+"You chose to print all pages to a file.\n"
+"This would produce a document identical to\n"
+"that currently loaded into the viewer.\n"
+"There is no need to print all pages into a new file."
+msgstr ""
+"您選擇列印全部頁到一個檔案中.\n"
+"這個動作將會導致此檔案與目前\n"
+"讀入的文件完全相同.\n"
+"不需要列印全部頁至新檔案中."
+
+#: kghostview.cpp:1592
+msgid ""
+"No file name was given so\n"
+"nothing could be printed to a file.\n"
+msgstr ""
+"沒有指定檔案名稱\n"
+"不會印任何東西到檔案中.\n"
+
+#: kghostview.cpp:1650
+#, fuzzy, c-format
+msgid "Print failure : %s"
+msgstr "列印失效 : %s"
+
+#: kghostview.cpp:1686
+msgid ""
+"Printing failed because the list of\n"
+"pages to be printed was empty.\n"
+msgstr ""
+"列印失敗: \n"
+"因為列印頁列表是空的\n"
+
+#: kghostview.cpp:2219 kghostview.cpp:2231 kghostview.cpp:2496
+#: kghostview.cpp:2519
+msgid "of 1    "
+msgstr ""
+
+#: kghostview.cpp:2221 kghostview.cpp:2233 kghostview.cpp:2521
+#, c-format
+msgid "of %d    "
+msgstr ""
+
+#: kghostview.cpp:2223 kghostview.cpp:2235 kghostview.cpp:2523
+#: kghostview.cpp:2530
+#, c-format
+msgid "of %d  "
+msgstr ""
+
+#: kghostview.cpp:2495
+msgid "Sc.1 "
+msgstr "章節.1 "
+
+#: kghostview.cpp:2498
+msgid "P.1 "
+msgstr "頁數.1 "
+
+#: kghostview.cpp:2500 kghostview.cpp:2513
+#, c-format
+msgid "P.%d "
+msgstr "頁數.%d "
+
+#: kghostview.cpp:2515
+#, c-format
+msgid "Sc.%d "
+msgstr "章節.%d "
+
 #: zoom.cpp:46
 #, fuzzy
 msgid "&Magnification"
 msgstr "倍率[&M]"
+
+#, fuzzy
+#~ msgid "&Defaults"
+#~ msgstr "預設[&D]"
+
+#, fuzzy
+#~ msgid "Zoom"
+#~ msgstr "放大"
+
+#~ msgid "Current key"
+#~ msgstr "目前按鍵"
+
+#, fuzzy
+#~ msgid "&Action"
+#~ msgstr "動作[&A]"
+
+#~ msgid "&No key"
+#~ msgstr "無按鍵對應[&N]"
+
+#, fuzzy
+#~ msgid "&Default key"
+#~ msgstr "預設按鍵[&D]"
+
+#~ msgid "&Custom key"
+#~ msgstr "自定按鍵[&C]"
 
 #~ msgid "Print"
 #~ msgstr "列印"
