--- a/po/cs/kpaint.po
+++ b/po/cs/kpaint.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: kpaint\n"
-"POT-Creation-Date: 1998-06-18 22:44+0200\n"
+"POT-Creation-Date: 1998-10-01 13:38+0200\n"
 "PO-Revision-Date: 1998-06-20 19:24 CEST\n"
 "Last-Translator: Miroslav Flídr <flidr@kky.zcu.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
@@ -30,49 +30,226 @@ msgstr "Pou¾ití:"
 msgid " [url | filename]\n"
 msgstr " [url | filename]\n"
 
-#: areaselect.cpp:17
-msgid "Area Selection"
-msgstr "Výbìr oblasti"
+#: kpaint.cpp:53 kpaint.cpp:606
+msgid "untitled.gif"
+msgstr "neznamy.gif"
 
-#: canvassize.cpp:16
-msgid "Canvas Size"
-msgstr "Velikost kreslící plochy"
+#: kpaint.cpp:127
+msgid "Unsaved Changes"
+msgstr "Neulo¾eny zmìny"
 
-#: canvassize.cpp:25
-msgid "Width:"
-msgstr "©íøka:"
+#: kpaint.cpp:128
+msgid ""
+"You have unsaved changes, you will loose them if you close this window now."
+msgstr "Máte neulo¾ené zmìny, které ztratíte, pokud nyní uzavøete toto okno."
 
-#: canvassize.cpp:26
-msgid "Height:"
-msgstr "Vý¹ka:"
+#: kpaint.cpp:163
+msgid "New Canvas"
+msgstr "Nová kreslící plocha"
 
-#: circle.cpp:18 kpaint.cpp:349
-msgid "Circle"
-msgstr "Kruh"
+#: kpaint.cpp:166
+msgid "Open File"
+msgstr "Otevøít soubor"
 
-#: depthdialog.cpp:18
-msgid "Image Depth:"
-msgstr "Barevná hloubka obrázku:"
+#: kpaint.cpp:169
+msgid "Save File"
+msgstr "Ulo¾it soubor"
 
-#: depthdialog.cpp:24
-msgid "1 (Bitmap)"
-msgstr "1 (bitmapa)"
+#: kpaint.cpp:183 kpaint.cpp:335
+msgid "Zoom In"
+msgstr "Zvìt¹it"
 
-#: depthdialog.cpp:25
-msgid "8 (256 Colour)"
-msgstr "8 (256 barev)"
+#: kpaint.cpp:186 kpaint.cpp:336
+msgid "Zoom Out"
+msgstr "Zmen¹it"
 
-#: depthdialog.cpp:26
-msgid "24 (True Colour)"
-msgstr "24 (pravé barvy)"
+#: kpaint.cpp:315
+msgid "Open Image..."
+msgstr "Otevøít obrazek..."
 
-#: ellipse.cpp:16 kpaint.cpp:348
+#: kpaint.cpp:316
+msgid "New Image..."
+msgstr "Nový obrázek..."
+
+#: kpaint.cpp:317
+msgid "Save Image"
+msgstr "Ulo¾it obrázek..."
+
+#: kpaint.cpp:318
+msgid "Save Image As..."
+msgstr "Ulo¾it obrazek jako..."
+
+#: kpaint.cpp:319
+msgid "Image Format..."
+msgstr "Formát obrázku"
+
+#: kpaint.cpp:321
+msgid "Open from URL..."
+msgstr "Otevøi z URL..."
+
+#: kpaint.cpp:322
+msgid "Save to URL..."
+msgstr "Ulo¾ na URL..."
+
+#: kpaint.cpp:324
+msgid "New Window"
+msgstr "Nové okno"
+
+#: kpaint.cpp:325
+msgid "Close Window"
+msgstr "Uzavøi okno"
+
+#: kpaint.cpp:327
+msgid "Exit"
+msgstr "Ukonèit"
+
+#: kpaint.cpp:330
+msgid "Copy Region"
+msgstr "Kopírovat oblast"
+
+#: kpaint.cpp:331
+msgid "Cut Region"
+msgstr "Vyjmout oblast"
+
+#: kpaint.cpp:332
+msgid "Paste Region"
+msgstr "Vlo¾it oblast"
+
+#: kpaint.cpp:333
+msgid "Paste As Image"
+msgstr "Vlo¾it jako obrázek"
+
+#: kpaint.cpp:337
+msgid "Mask..."
+msgstr "Maska"
+
+#: kpaint.cpp:340
+msgid "Information..."
+msgstr "Informace..."
+
+#: kpaint.cpp:341
+msgid "Resize..."
+msgstr "Zmìna velikosti..."
+
+#: kpaint.cpp:342
+msgid "Edit Palette..."
+msgstr "Upravit paletu..."
+
+#: kpaint.cpp:343
+msgid "Change Colour Depth..."
+msgstr "Zmìnit barevnou hloubku..."
+
+#: kpaint.cpp:346
+msgid "Tool Properties..."
+msgstr "Vlastnosti nástrojù..."
+
+#: kpaint.cpp:348 pen.cpp:17
+msgid "Pen"
+msgstr "Pero"
+
+#: kpaint.cpp:349 line.cpp:19
+msgid "Line"
+msgstr "Èára"
+
+#: kpaint.cpp:350 rectangle.cpp:17
+msgid "Rectangle"
+msgstr "Obdélník"
+
+#: ellipse.cpp:16 kpaint.cpp:351
 msgid "Ellipse"
 msgstr "Elipsa"
 
-#: formatdialog.cpp:21
-msgid "File Format:"
-msgstr "Datový formát:"
+#: circle.cpp:18 kpaint.cpp:352
+msgid "Circle"
+msgstr "Kruh"
+
+#: kpaint.cpp:353 spraycan.cpp:19
+msgid "Spray Can"
+msgstr "Sprej"
+
+#: kpaint.cpp:354
+msgid "Area Select"
+msgstr "Výbìr oblasti"
+
+#: kpaint.cpp:355
+msgid "Round Angle"
+msgstr "Oblé rohy"
+
+#: kpaint.cpp:360
+msgid "Show Tools Toolbar"
+msgstr "Zobrazovat li¹tu nástrojù"
+
+#: kpaint.cpp:361
+msgid "Show Commands Toolbar"
+msgstr "Zobrazovat li¹tu pøíkazù"
+
+#: kpaint.cpp:362
+msgid "Show Status Bar"
+msgstr "Zobrazovat informaèní li¹tu"
+
+#: kpaint.cpp:363
+msgid "Save Options"
+msgstr "Ulo¾it nastavení"
+
+#: kpaint.cpp:372
+msgid "KPaint"
+msgstr "KPaint"
+
+#: kpaint.cpp:374
+msgid ""
+"\n"
+"\n"
+"(c) "
+msgstr ""
+"\n"
+"\n"
+"(c)"
+
+#: kpaint.cpp:383
+msgid "&Image"
+msgstr "&Obrázek"
+
+#: kpaint.cpp:384
+msgid "&Tool"
+msgstr "Nás&troj"
+
+#: kpaint.cpp:536
+msgid "KPaint: Could not open file"
+msgstr "KPaint: nemohu otevøít soubor"
+
+#: kpaint.cpp:537
+msgid ""
+"Error: Could not open file\n"
+"KPaint could not open the specified file."
+msgstr ""
+"Chyba: nemohu otevøít soubor\n"
+"KPaint nemohl otevøít specifikovaný soubor."
+
+#: kpaint.cpp:545
+msgid "KPaint: Unknown Format"
+msgstr "KPaint: Neznámý formát"
+
+#: kpaint.cpp:546
+msgid ""
+"Error: Unknown Format\n"
+"KPaint does not understand the format of the specified file\n"
+"or the file is corrupt."
+msgstr ""
+"Chyba: Neznámý formát\n"
+"KPAint nerozumí formátu specifikovaného souboru\n"
+"nebo je  soubor naru¹ený."
+
+#: kpaint.cpp:748
+msgid "Open Location:"
+msgstr "Otevøi místo:"
+
+#: kpaint.cpp:772
+msgid "Save to Location:"
+msgstr "Ulo¾ na místo:"
+
+#: manager.cpp:69
+msgid "Tool Properties"
+msgstr "Vlastnosti nástroje"
 
 #: infodialog.cpp:24
 msgid "Colour Depth:"
@@ -90,222 +267,29 @@ msgstr "©íøka obrázku:"
 msgid "Image Height:"
 msgstr "Vý¹ka obrázku:"
 
-#: kpaint.cpp:52 kpaint.cpp:603
-msgid "untitled.gif"
-msgstr "neznamy.gif"
-
-#: kpaint.cpp:124
-msgid "Unsaved Changes"
-msgstr "Neulo¾eny zmìny"
-
-#: kpaint.cpp:125
-msgid ""
-"You have unsaved changes, you will loose them if you close this window now."
-msgstr "Máte neulo¾ené zmìny, které ztratíte, pokud nyní uzavøete toto okno."
-
-#: kpaint.cpp:160
-msgid "New Canvas"
-msgstr "Nová kreslící plocha"
-
-#: kpaint.cpp:163
-msgid "Open File"
-msgstr "Otevøít soubor"
-
-#: kpaint.cpp:166
-msgid "Save File"
-msgstr "Ulo¾it soubor"
-
-#: kpaint.cpp:180 kpaint.cpp:332
-msgid "Zoom In"
-msgstr "Zvìt¹it"
-
-#: kpaint.cpp:183 kpaint.cpp:333
-msgid "Zoom Out"
-msgstr "Zmen¹it"
-
-#: kpaint.cpp:312
-msgid "Open Image..."
-msgstr "Otevøít obrazek..."
-
-#: kpaint.cpp:313
-msgid "New Image..."
-msgstr "Nový obrázek..."
-
-#: kpaint.cpp:314
-msgid "Save Image"
-msgstr "Ulo¾it obrázek..."
-
-#: kpaint.cpp:315
-msgid "Save Image As..."
-msgstr "Ulo¾it obrazek jako..."
-
-#: kpaint.cpp:316
-msgid "Image Format..."
-msgstr "Formát obrázku"
-
-#: kpaint.cpp:318
-msgid "Open from URL..."
-msgstr "Otevøi z URL..."
-
-#: kpaint.cpp:319
-msgid "Save to URL..."
-msgstr "Ulo¾ na URL..."
-
-#: kpaint.cpp:321
-msgid "New Window"
-msgstr "Nové okno"
-
-#: kpaint.cpp:322
-msgid "Close Window"
-msgstr "Uzavøi okno"
-
-#: kpaint.cpp:324
-msgid "Exit"
-msgstr "Ukonèit"
-
-#: kpaint.cpp:327
-msgid "Copy Region"
-msgstr "Kopírovat oblast"
-
-#: kpaint.cpp:328
-msgid "Cut Region"
-msgstr "Vyjmout oblast"
-
-#: kpaint.cpp:329
-msgid "Paste Region"
-msgstr "Vlo¾it oblast"
-
-#: kpaint.cpp:330
-msgid "Paste As Image"
-msgstr "Vlo¾it jako obrázek"
-
-#: kpaint.cpp:334
-msgid "Mask..."
-msgstr "Maska"
-
-#: kpaint.cpp:337
-msgid "Information..."
-msgstr "Informace..."
-
-#: kpaint.cpp:338
-msgid "Resize..."
-msgstr "Zmìna velikosti..."
-
-#: kpaint.cpp:339
-msgid "Edit Palette..."
-msgstr "Upravit paletu..."
-
-#: kpaint.cpp:340
-msgid "Change Colour Depth..."
-msgstr "Zmìnit barevnou hloubku..."
-
-#: kpaint.cpp:343
-msgid "Tool Properties..."
-msgstr "Vlastnosti nástrojù..."
-
-#: kpaint.cpp:345 pen.cpp:17
-msgid "Pen"
-msgstr "Pero"
-
-#: kpaint.cpp:346 line.cpp:19
-msgid "Line"
-msgstr "Èára"
-
-#: kpaint.cpp:347 rectangle.cpp:17
-msgid "Rectangle"
-msgstr "Obdélník"
-
-#: kpaint.cpp:350 spraycan.cpp:19
-msgid "Spray Can"
-msgstr "Sprej"
-
-#: kpaint.cpp:351
-msgid "Area Select"
-msgstr "Výbìr oblasti"
-
-#: kpaint.cpp:352
-msgid "Round Angle"
-msgstr "Oblé rohy"
-
-#: kpaint.cpp:357
-msgid "Show Tools Toolbar"
-msgstr "Zobrazovat li¹tu nástrojù"
-
-#: kpaint.cpp:358
-msgid "Show Commands Toolbar"
-msgstr "Zobrazovat li¹tu pøíkazù"
-
-#: kpaint.cpp:359
-msgid "Show Status Bar"
-msgstr "Zobrazovat informaèní li¹tu"
-
-#: kpaint.cpp:360
-msgid "Save Options"
-msgstr "Ulo¾it nastavení"
-
-#: kpaint.cpp:369
-msgid "KPaint"
-msgstr "KPaint"
-
-#: kpaint.cpp:371
-msgid ""
-"\n"
-"\n"
-"(c) "
+#: infodialog.cpp:94 palettedialog.cpp:14
+msgid "Dismiss"
 msgstr ""
-"\n"
-"\n"
-"(c)"
-
-#: kpaint.cpp:380
-msgid "&Image"
-msgstr "&Obrázek"
-
-#: kpaint.cpp:381
-msgid "&Tool"
-msgstr "Nás&troj"
-
-#: kpaint.cpp:533
-msgid "KPaint: Could not open file"
-msgstr "KPaint: nemohu otevøít soubor"
-
-#: kpaint.cpp:534
-msgid ""
-"Error: Could not open file\n"
-"KPaint could not open the specified file."
-msgstr ""
-"Chyba: nemohu otevøít soubor\n"
-"KPaint nemohl otevøít specifikovaný soubor."
-
-#: kpaint.cpp:542
-msgid "KPaint: Unknown Format"
-msgstr "KPaint: Neznámý formát"
-
-#: kpaint.cpp:543
-msgid ""
-"Error: Unknown Format\n"
-"KPaint does not understand the format of the specified file\n"
-"or the file is corrupt."
-msgstr ""
-"Chyba: Neznámý formát\n"
-"KPAint nerozumí formátu specifikovaného souboru\n"
-"nebo je  soubor naru¹ený."
-
-#: kpaint.cpp:745
-msgid "Open Location:"
-msgstr "Otevøi místo:"
-
-#: kpaint.cpp:769
-msgid "Save to Location:"
-msgstr "Ulo¾ na místo:"
-
-#: manager.cpp:69
-msgid "Tool Properties"
-msgstr "Vlastnosti nástroje"
 
 #: palette.cpp:100
 msgid "Edit Colour"
 msgstr "Upravit barvu"
+
+#: formatdialog.cpp:21
+msgid "File Format:"
+msgstr "Datový formát:"
+
+#: canvassize.cpp:16
+msgid "Canvas Size"
+msgstr "Velikost kreslící plochy"
+
+#: canvassize.cpp:25
+msgid "Width:"
+msgstr "©íøka:"
+
+#: canvassize.cpp:26
+msgid "Height:"
+msgstr "Vý¹ka:"
 
 #: properties.cpp:21
 msgid "Line Properties"
@@ -398,6 +382,26 @@ msgstr "Nastav barvu èáry..."
 #: properties.cpp:331
 msgid "Set Line Colour..."
 msgstr "Nastav barvu èáry ..."
+
+#: areaselect.cpp:17
+msgid "Area Selection"
+msgstr "Výbìr oblasti"
+
+#: depthdialog.cpp:18
+msgid "Image Depth:"
+msgstr "Barevná hloubka obrázku:"
+
+#: depthdialog.cpp:24
+msgid "1 (Bitmap)"
+msgstr "1 (bitmapa)"
+
+#: depthdialog.cpp:25
+msgid "8 (256 Colour)"
+msgstr "8 (256 barev)"
+
+#: depthdialog.cpp:26
+msgid "24 (True Colour)"
+msgstr "24 (pravé barvy)"
 
 #: roundangle.cpp:19
 msgid "Roundangle"
