--- a/po/fi/kpaint.po
+++ b/po/fi/kpaint.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 1998-06-18 22:44+0200\n"
+"POT-Creation-Date: 1998-10-01 13:38+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Kim Enkovaara <kim.enkovaara@iki.fi>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -31,49 +31,225 @@ msgstr "Käyttö: "
 msgid " [url | filename]\n"
 msgstr " [url | tiedostonimi]\n"
 
-#: areaselect.cpp:17
-msgid "Area Selection"
-msgstr "Alueen valinta"
+#: kpaint.cpp:53 kpaint.cpp:606
+msgid "untitled.gif"
+msgstr "nimeton.gif"
 
-#: canvassize.cpp:16
-msgid "Canvas Size"
-msgstr "Kuvan koko"
+#: kpaint.cpp:127
+msgid "Unsaved Changes"
+msgstr "Tallentamattomat muutokset"
 
-#: canvassize.cpp:25
-msgid "Width:"
-msgstr "Leveys:"
+#: kpaint.cpp:128
+msgid ""
+"You have unsaved changes, you will loose them if you close this window now."
+msgstr "Et ole tallentanut muutoksia, menetät ne, jos suljet tämän ikkunan."
 
-#: canvassize.cpp:26
-msgid "Height:"
-msgstr "Korkeus:"
+#: kpaint.cpp:163
+msgid "New Canvas"
+msgstr "Uusi pohja"
 
-#: circle.cpp:18 kpaint.cpp:349
-msgid "Circle"
-msgstr "Ympyrä"
+#: kpaint.cpp:166
+msgid "Open File"
+msgstr "Avaa"
 
-#: depthdialog.cpp:18
-msgid "Image Depth:"
-msgstr "Kuvan syvyys:"
+#: kpaint.cpp:169
+msgid "Save File"
+msgstr "Tallenna"
 
-#: depthdialog.cpp:24
-msgid "1 (Bitmap)"
-msgstr "1 (bittikartta)"
+#: kpaint.cpp:183 kpaint.cpp:335
+msgid "Zoom In"
+msgstr "Suurenna"
 
-#: depthdialog.cpp:25
-msgid "8 (256 Colour)"
-msgstr "8 (256 väriä)"
+#: kpaint.cpp:186 kpaint.cpp:336
+msgid "Zoom Out"
+msgstr "Pienennä"
 
-#: depthdialog.cpp:26
-msgid "24 (True Colour)"
-msgstr "24 (Täysväri)"
+#: kpaint.cpp:315
+msgid "Open Image..."
+msgstr "Avaa kuva..."
 
-#: ellipse.cpp:16 kpaint.cpp:348
+#: kpaint.cpp:316
+msgid "New Image..."
+msgstr "Uusi kuva..."
+
+#: kpaint.cpp:317
+msgid "Save Image"
+msgstr "Tallenna kuva"
+
+#: kpaint.cpp:318
+msgid "Save Image As..."
+msgstr "Tallenna kuva nimellä..."
+
+#: kpaint.cpp:319
+msgid "Image Format..."
+msgstr "Kuvaformaatti..."
+
+#: kpaint.cpp:321
+msgid "Open from URL..."
+msgstr "Avaa URL:ta..."
+
+#: kpaint.cpp:322
+msgid "Save to URL..."
+msgstr "Tallenna URL:iin..."
+
+#: kpaint.cpp:324
+msgid "New Window"
+msgstr "Uusi ikkuna"
+
+#: kpaint.cpp:325
+msgid "Close Window"
+msgstr "Sulje ikkuna"
+
+#: kpaint.cpp:327
+msgid "Exit"
+msgstr "Lopeta"
+
+#: kpaint.cpp:330
+msgid "Copy Region"
+msgstr "Kopioi alue"
+
+#: kpaint.cpp:331
+msgid "Cut Region"
+msgstr "Leikkaa alue"
+
+#: kpaint.cpp:332
+msgid "Paste Region"
+msgstr "Liitä alue"
+
+#: kpaint.cpp:333
+msgid "Paste As Image"
+msgstr "Liitä kuvana"
+
+#: kpaint.cpp:337
+msgid "Mask..."
+msgstr "Maski..."
+
+#: kpaint.cpp:340
+msgid "Information..."
+msgstr "Tietoja..."
+
+#: kpaint.cpp:341
+msgid "Resize..."
+msgstr "Muuta kokoa..."
+
+#: kpaint.cpp:342
+msgid "Edit Palette..."
+msgstr "Muokkaa palettia..."
+
+#: kpaint.cpp:343
+msgid "Change Colour Depth..."
+msgstr "Muuta värisyvyyttä..."
+
+#: kpaint.cpp:346
+msgid "Tool Properties..."
+msgstr "Työkalujen ominaisuudet"
+
+#: kpaint.cpp:348 pen.cpp:17
+msgid "Pen"
+msgstr "Kynä"
+
+#: kpaint.cpp:349 line.cpp:19
+msgid "Line"
+msgstr "Viiva"
+
+#: kpaint.cpp:350 rectangle.cpp:17
+msgid "Rectangle"
+msgstr "Suorakulmio"
+
+#: ellipse.cpp:16 kpaint.cpp:351
 msgid "Ellipse"
 msgstr "Ellipsi"
 
-#: formatdialog.cpp:21
-msgid "File Format:"
-msgstr "Kuvaformaatti:"
+#: circle.cpp:18 kpaint.cpp:352
+msgid "Circle"
+msgstr "Ympyrä"
+
+#: kpaint.cpp:353 spraycan.cpp:19
+msgid "Spray Can"
+msgstr "Spraypurkki"
+
+#: kpaint.cpp:354
+msgid "Area Select"
+msgstr "Alueen valinta"
+
+#: kpaint.cpp:355
+msgid "Round Angle"
+msgstr "Pyöreä kulma"
+
+#: kpaint.cpp:360
+msgid "Show Tools Toolbar"
+msgstr "Näytä työkalupalkki"
+
+#: kpaint.cpp:361
+msgid "Show Commands Toolbar"
+msgstr "Näytä komentojen työkalupalkki"
+
+#: kpaint.cpp:362
+msgid "Show Status Bar"
+msgstr "Näytä tilapalkki"
+
+#: kpaint.cpp:363
+msgid "Save Options"
+msgstr "Tallenna asetukset"
+
+#: kpaint.cpp:372
+msgid "KPaint"
+msgstr "KPaint"
+
+#: kpaint.cpp:374
+msgid ""
+"\n"
+"\n"
+"(c) "
+msgstr ""
+"\n"
+"\n"
+"(c) "
+
+#: kpaint.cpp:383
+msgid "&Image"
+msgstr "&Kuva"
+
+#: kpaint.cpp:384
+msgid "&Tool"
+msgstr "&Työkalut"
+
+#: kpaint.cpp:536
+msgid "KPaint: Could not open file"
+msgstr "KPaint: En saa avattua tiedostoa"
+
+#: kpaint.cpp:537
+msgid ""
+"Error: Could not open file\n"
+"KPaint could not open the specified file."
+msgstr ""
+"Virhe: En saa avattua tiedostoa\n"
+"KPaint ei voinut avata tiedostoa."
+
+#: kpaint.cpp:545
+msgid "KPaint: Unknown Format"
+msgstr "KPaint: Tuntematon formaatti"
+
+#: kpaint.cpp:546
+msgid ""
+"Error: Unknown Format\n"
+"KPaint does not understand the format of the specified file\n"
+"or the file is corrupt."
+msgstr ""
+"Virhe: Tuntematon formaatti\n"
+"KPaint ei ymmärrä kuvan formaattia tai tiedosto on vaurioitunut."
+
+#: kpaint.cpp:748
+msgid "Open Location:"
+msgstr "Avaa sijainti:"
+
+#: kpaint.cpp:772
+msgid "Save to Location:"
+msgstr "Tallenna sijaintiin:"
+
+#: manager.cpp:69
+msgid "Tool Properties"
+msgstr "Työkalujen ominaisuudet"
 
 #: infodialog.cpp:24
 msgid "Colour Depth:"
@@ -91,221 +267,29 @@ msgstr "Kuvan leveys:"
 msgid "Image Height:"
 msgstr "Kuvan korkeus:"
 
-#: kpaint.cpp:52 kpaint.cpp:603
-msgid "untitled.gif"
-msgstr "nimeton.gif"
-
-#: kpaint.cpp:124
-msgid "Unsaved Changes"
-msgstr "Tallentamattomat muutokset"
-
-#: kpaint.cpp:125
-msgid ""
-"You have unsaved changes, you will loose them if you close this window now."
-msgstr "Et ole tallentanut muutoksia, menetät ne, jos suljet tämän ikkunan."
-
-#: kpaint.cpp:160
-msgid "New Canvas"
-msgstr "Uusi pohja"
-
-#: kpaint.cpp:163
-msgid "Open File"
-msgstr "Avaa"
-
-#: kpaint.cpp:166
-msgid "Save File"
-msgstr "Tallenna"
-
-#: kpaint.cpp:180 kpaint.cpp:332
-msgid "Zoom In"
-msgstr "Suurenna"
-
-#: kpaint.cpp:183 kpaint.cpp:333
-msgid "Zoom Out"
-msgstr "Pienennä"
-
-#: kpaint.cpp:312
-msgid "Open Image..."
-msgstr "Avaa kuva..."
-
-#: kpaint.cpp:313
-msgid "New Image..."
-msgstr "Uusi kuva..."
-
-#: kpaint.cpp:314
-msgid "Save Image"
-msgstr "Tallenna kuva"
-
-#: kpaint.cpp:315
-msgid "Save Image As..."
-msgstr "Tallenna kuva nimellä..."
-
-#: kpaint.cpp:316
-msgid "Image Format..."
-msgstr "Kuvaformaatti..."
-
-#: kpaint.cpp:318
-msgid "Open from URL..."
-msgstr "Avaa URL:ta..."
-
-#: kpaint.cpp:319
-msgid "Save to URL..."
-msgstr "Tallenna URL:iin..."
-
-#: kpaint.cpp:321
-msgid "New Window"
-msgstr "Uusi ikkuna"
-
-#: kpaint.cpp:322
-msgid "Close Window"
-msgstr "Sulje ikkuna"
-
-#: kpaint.cpp:324
-msgid "Exit"
-msgstr "Lopeta"
-
-#: kpaint.cpp:327
-msgid "Copy Region"
-msgstr "Kopioi alue"
-
-#: kpaint.cpp:328
-msgid "Cut Region"
-msgstr "Leikkaa alue"
-
-#: kpaint.cpp:329
-msgid "Paste Region"
-msgstr "Liitä alue"
-
-#: kpaint.cpp:330
-msgid "Paste As Image"
-msgstr "Liitä kuvana"
-
-#: kpaint.cpp:334
-msgid "Mask..."
-msgstr "Maski..."
-
-#: kpaint.cpp:337
-msgid "Information..."
-msgstr "Tietoja..."
-
-#: kpaint.cpp:338
-msgid "Resize..."
-msgstr "Muuta kokoa..."
-
-#: kpaint.cpp:339
-msgid "Edit Palette..."
-msgstr "Muokkaa palettia..."
-
-#: kpaint.cpp:340
-msgid "Change Colour Depth..."
-msgstr "Muuta värisyvyyttä..."
-
-#: kpaint.cpp:343
-msgid "Tool Properties..."
-msgstr "Työkalujen ominaisuudet"
-
-#: kpaint.cpp:345 pen.cpp:17
-msgid "Pen"
-msgstr "Kynä"
-
-#: kpaint.cpp:346 line.cpp:19
-msgid "Line"
-msgstr "Viiva"
-
-#: kpaint.cpp:347 rectangle.cpp:17
-msgid "Rectangle"
-msgstr "Suorakulmio"
-
-#: kpaint.cpp:350 spraycan.cpp:19
-msgid "Spray Can"
-msgstr "Spraypurkki"
-
-#: kpaint.cpp:351
-msgid "Area Select"
-msgstr "Alueen valinta"
-
-#: kpaint.cpp:352
-msgid "Round Angle"
-msgstr "Pyöreä kulma"
-
-#: kpaint.cpp:357
-msgid "Show Tools Toolbar"
-msgstr "Näytä työkalupalkki"
-
-#: kpaint.cpp:358
-msgid "Show Commands Toolbar"
-msgstr "Näytä komentojen työkalupalkki"
-
-#: kpaint.cpp:359
-msgid "Show Status Bar"
-msgstr "Näytä tilapalkki"
-
-#: kpaint.cpp:360
-msgid "Save Options"
-msgstr "Tallenna asetukset"
-
-#: kpaint.cpp:369
-msgid "KPaint"
-msgstr "KPaint"
-
-#: kpaint.cpp:371
-msgid ""
-"\n"
-"\n"
-"(c) "
+#: infodialog.cpp:94 palettedialog.cpp:14
+msgid "Dismiss"
 msgstr ""
-"\n"
-"\n"
-"(c) "
-
-#: kpaint.cpp:380
-msgid "&Image"
-msgstr "&Kuva"
-
-#: kpaint.cpp:381
-msgid "&Tool"
-msgstr "&Työkalut"
-
-#: kpaint.cpp:533
-msgid "KPaint: Could not open file"
-msgstr "KPaint: En saa avattua tiedostoa"
-
-#: kpaint.cpp:534
-msgid ""
-"Error: Could not open file\n"
-"KPaint could not open the specified file."
-msgstr ""
-"Virhe: En saa avattua tiedostoa\n"
-"KPaint ei voinut avata tiedostoa."
-
-#: kpaint.cpp:542
-msgid "KPaint: Unknown Format"
-msgstr "KPaint: Tuntematon formaatti"
-
-#: kpaint.cpp:543
-msgid ""
-"Error: Unknown Format\n"
-"KPaint does not understand the format of the specified file\n"
-"or the file is corrupt."
-msgstr ""
-"Virhe: Tuntematon formaatti\n"
-"KPaint ei ymmärrä kuvan formaattia tai tiedosto on vaurioitunut."
-
-#: kpaint.cpp:745
-msgid "Open Location:"
-msgstr "Avaa sijainti:"
-
-#: kpaint.cpp:769
-msgid "Save to Location:"
-msgstr "Tallenna sijaintiin:"
-
-#: manager.cpp:69
-msgid "Tool Properties"
-msgstr "Työkalujen ominaisuudet"
 
 #: palette.cpp:100
 msgid "Edit Colour"
 msgstr "Muokkaa väriä"
+
+#: formatdialog.cpp:21
+msgid "File Format:"
+msgstr "Kuvaformaatti:"
+
+#: canvassize.cpp:16
+msgid "Canvas Size"
+msgstr "Kuvan koko"
+
+#: canvassize.cpp:25
+msgid "Width:"
+msgstr "Leveys:"
+
+#: canvassize.cpp:26
+msgid "Height:"
+msgstr "Korkeus:"
 
 #: properties.cpp:21
 msgid "Line Properties"
@@ -398,6 +382,26 @@ msgstr "Liitostyyli:"
 #: properties.cpp:331
 msgid "Set Line Colour..."
 msgstr "Viivan väri..."
+
+#: areaselect.cpp:17
+msgid "Area Selection"
+msgstr "Alueen valinta"
+
+#: depthdialog.cpp:18
+msgid "Image Depth:"
+msgstr "Kuvan syvyys:"
+
+#: depthdialog.cpp:24
+msgid "1 (Bitmap)"
+msgstr "1 (bittikartta)"
+
+#: depthdialog.cpp:25
+msgid "8 (256 Colour)"
+msgstr "8 (256 väriä)"
+
+#: depthdialog.cpp:26
+msgid "24 (True Colour)"
+msgstr "24 (Täysväri)"
 
 #: roundangle.cpp:19
 msgid "Roundangle"
