--- a/po/pl/kpaint.po
+++ b/po/pl/kpaint.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: kpaint \n"
-"POT-Creation-Date: 1998-06-18 22:44+0200\n"
+"POT-Creation-Date: 1998-10-01 13:38+0200\n"
 "PO-Revision-Date: 1998-06-24 00:06+0200\n"
 "Last-Translator: Jacek Stolarczyk <jacek@mer.chemia.polsl.gliwice.pl>\n"
 "Content-Type: text/plain; charset=iso-8859-2\n"
@@ -29,52 +29,230 @@ msgstr "U¿ycie: "
 msgid " [url | filename]\n"
 msgstr " [url | nazwa]\n"
 
-#: areaselect.cpp:17
-msgid "Area Selection"
-msgstr "Zaznaczony obszar"
+#: kpaint.cpp:53 kpaint.cpp:606
+msgid "untitled.gif"
+msgstr "nienazwany.gif"
 
-#: canvassize.cpp:16
-msgid "Canvas Size"
-msgstr "Rozmiar obrazu"
+#: kpaint.cpp:127
+msgid "Unsaved Changes"
+msgstr "Niezachowane zmiany"
 
-#: canvassize.cpp:25
+#: kpaint.cpp:128
+msgid ""
+"You have unsaved changes, you will loose them if you close this window now."
+msgstr ""
+"Niektóre zmiany nie s± zachowane, utracisz je je¶li zamkniesz teraz to okno."
+
+#: kpaint.cpp:163
+msgid "New Canvas"
+msgstr "Nowy obraz"
+
+#: kpaint.cpp:166
+msgid "Open File"
+msgstr "Otwórz plik"
+
+#: kpaint.cpp:169
+msgid "Save File"
+msgstr "Zachowaj plik"
+
+#: kpaint.cpp:183 kpaint.cpp:335
+msgid "Zoom In"
+msgstr "Powiêksz"
+
+#: kpaint.cpp:186 kpaint.cpp:336
+msgid "Zoom Out"
+msgstr "Pomniejsz"
+
+#: kpaint.cpp:315
+msgid "Open Image..."
+msgstr "&Otwórz..."
+
+#: kpaint.cpp:316
+msgid "New Image..."
+msgstr "&Nowy..."
+
+#: kpaint.cpp:317
 #, fuzzy
-msgid "Width:"
-msgstr "Szeroko¶æ:"
+msgid "Save Image"
+msgstr "&Zachowaj"
 
-#: canvassize.cpp:26
-#, fuzzy
-msgid "Height:"
-msgstr "Wysoko¶æ:"
+#: kpaint.cpp:318
+msgid "Save Image As..."
+msgstr "Zachowaj &jako..."
 
-#: circle.cpp:18 kpaint.cpp:349
-msgid "Circle"
-msgstr "Okr±g"
+#: kpaint.cpp:319
+msgid "Image Format..."
+msgstr "&Format obrazu..."
 
-#: depthdialog.cpp:18
-#, fuzzy
-msgid "Image Depth:"
-msgstr "G³êboko¶æ obrazu:"
+#: kpaint.cpp:321
+msgid "Open from URL..."
+msgstr "Otwórz z URL..."
 
-#: depthdialog.cpp:24
-msgid "1 (Bitmap)"
-msgstr "1 (Monochromatyczny)"
+#: kpaint.cpp:322
+msgid "Save to URL..."
+msgstr "Zapisz do URL..."
 
-#: depthdialog.cpp:25
-msgid "8 (256 Colour)"
-msgstr "8 (256 kolorów)"
+#: kpaint.cpp:324
+msgid "New Window"
+msgstr "Nowe okno"
 
-#: depthdialog.cpp:26
-msgid "24 (True Colour)"
-msgstr "24 (True Colour)"
+#: kpaint.cpp:325
+msgid "Close Window"
+msgstr "Zamknij okno"
 
-#: ellipse.cpp:16 kpaint.cpp:348
+#: kpaint.cpp:327
+msgid "Exit"
+msgstr "Wy&j¶cie"
+
+#: kpaint.cpp:330
+msgid "Copy Region"
+msgstr "Kopiuj obszar"
+
+#: kpaint.cpp:331
+msgid "Cut Region"
+msgstr "Wytnij obszar"
+
+#: kpaint.cpp:332
+msgid "Paste Region"
+msgstr "Wklej obszar"
+
+#: kpaint.cpp:333
+msgid "Paste As Image"
+msgstr "Wklej jako obraz"
+
+#: kpaint.cpp:337
+msgid "Mask..."
+msgstr "Maska..."
+
+#: kpaint.cpp:340
+msgid "Information..."
+msgstr "Informacje..."
+
+#: kpaint.cpp:341
+msgid "Resize..."
+msgstr "Zmieñ rozmiar..."
+
+#: kpaint.cpp:342
+msgid "Edit Palette..."
+msgstr "Edytuj paletê..."
+
+#: kpaint.cpp:343
+msgid "Change Colour Depth..."
+msgstr "Zmieñ g³êbiê kolorów..."
+
+#: kpaint.cpp:346
+msgid "Tool Properties..."
+msgstr "W³a¶ciwo¶ci narzêdzi..."
+
+#: kpaint.cpp:348 pen.cpp:17
+msgid "Pen"
+msgstr "Piórko"
+
+#: kpaint.cpp:349 line.cpp:19
+msgid "Line"
+msgstr "Linia"
+
+#: kpaint.cpp:350 rectangle.cpp:17
+msgid "Rectangle"
+msgstr "Prostok±t"
+
+#: ellipse.cpp:16 kpaint.cpp:351
 msgid "Ellipse"
 msgstr "Elipsa"
 
-#: formatdialog.cpp:21
-msgid "File Format:"
-msgstr "Format pliku:"
+#: circle.cpp:18 kpaint.cpp:352
+msgid "Circle"
+msgstr "Okr±g"
+
+#: kpaint.cpp:353 spraycan.cpp:19
+msgid "Spray Can"
+msgstr "Spray"
+
+#: kpaint.cpp:354
+msgid "Area Select"
+msgstr "Zaznacz obszar"
+
+#: kpaint.cpp:355
+msgid "Round Angle"
+msgstr "Prostok±t o zaokr±glonych rogach"
+
+#: kpaint.cpp:360
+#, fuzzy
+msgid "Show Tools Toolbar"
+msgstr "Poka¿ pasek zadañ"
+
+#: kpaint.cpp:361
+#, fuzzy
+msgid "Show Commands Toolbar"
+msgstr "Poka¿ pasek zadañ"
+
+#: kpaint.cpp:362
+msgid "Show Status Bar"
+msgstr "Poka¿ pasek stanu"
+
+#: kpaint.cpp:363
+msgid "Save Options"
+msgstr "Zachowaj opcje"
+
+#: kpaint.cpp:372
+msgid "KPaint"
+msgstr "KPaint"
+
+#: kpaint.cpp:374
+msgid ""
+"\n"
+"\n"
+"(c) "
+msgstr ""
+"\n"
+"\n"
+"(c) "
+
+#: kpaint.cpp:383
+msgid "&Image"
+msgstr "&Obraz"
+
+#: kpaint.cpp:384
+msgid "&Tool"
+msgstr "&Narzêdzia"
+
+#: kpaint.cpp:536
+msgid "KPaint: Could not open file"
+msgstr "KPaint: Nie mo¿na otworzyæ pliku"
+
+#: kpaint.cpp:537
+msgid ""
+"Error: Could not open file\n"
+"KPaint could not open the specified file."
+msgstr ""
+"B³±d: Nie mo¿na otworzyæ pliku\n"
+"KPaint nie mo¿e otworzyæ wybranego pliku."
+
+#: kpaint.cpp:545
+msgid "KPaint: Unknown Format"
+msgstr "KPaint: Nieznany format"
+
+#: kpaint.cpp:546
+#, fuzzy
+msgid ""
+"Error: Unknown Format\n"
+"KPaint does not understand the format of the specified file\n"
+"or the file is corrupt."
+msgstr ""
+"B³±d: Nieznany format\n"
+"KPaint nie rozpozna³ formatu lub plik jest uszkodzony."
+
+#: kpaint.cpp:748
+msgid "Open Location:"
+msgstr "Otwórz lokacjê:"
+
+#: kpaint.cpp:772
+msgid "Save to Location:"
+msgstr "Zapisz do lokacji:"
+
+#: manager.cpp:69
+msgid "Tool Properties"
+msgstr "W³a¶ciwo¶ci narzêdzi"
 
 #: infodialog.cpp:24
 msgid "Colour Depth:"
@@ -92,226 +270,31 @@ msgstr "Szeroko¶æ obrazu:"
 msgid "Image Height:"
 msgstr "Wysoko¶æ obrazu:"
 
-#: kpaint.cpp:52 kpaint.cpp:603
-msgid "untitled.gif"
-msgstr "nienazwany.gif"
-
-#: kpaint.cpp:124
-msgid "Unsaved Changes"
-msgstr "Niezachowane zmiany"
-
-#: kpaint.cpp:125
-msgid ""
-"You have unsaved changes, you will loose them if you close this window now."
-msgstr ""
-"Niektóre zmiany nie s± zachowane, utracisz je je¶li zamkniesz teraz to okno."
-
-#: kpaint.cpp:160
-msgid "New Canvas"
-msgstr "Nowy obraz"
-
-#: kpaint.cpp:163
-msgid "Open File"
-msgstr "Otwórz plik"
-
-#: kpaint.cpp:166
-msgid "Save File"
-msgstr "Zachowaj plik"
-
-#: kpaint.cpp:180 kpaint.cpp:332
-msgid "Zoom In"
-msgstr "Powiêksz"
-
-#: kpaint.cpp:183 kpaint.cpp:333
-msgid "Zoom Out"
-msgstr "Pomniejsz"
-
-#: kpaint.cpp:312
-msgid "Open Image..."
-msgstr "&Otwórz..."
-
-#: kpaint.cpp:313
-msgid "New Image..."
-msgstr "&Nowy..."
-
-#: kpaint.cpp:314
-#, fuzzy
-msgid "Save Image"
-msgstr "&Zachowaj"
-
-#: kpaint.cpp:315
-msgid "Save Image As..."
-msgstr "Zachowaj &jako..."
-
-#: kpaint.cpp:316
-msgid "Image Format..."
-msgstr "&Format obrazu..."
-
-#: kpaint.cpp:318
-msgid "Open from URL..."
-msgstr "Otwórz z URL..."
-
-#: kpaint.cpp:319
-msgid "Save to URL..."
-msgstr "Zapisz do URL..."
-
-#: kpaint.cpp:321
-msgid "New Window"
-msgstr "Nowe okno"
-
-#: kpaint.cpp:322
-msgid "Close Window"
-msgstr "Zamknij okno"
-
-#: kpaint.cpp:324
-msgid "Exit"
-msgstr "Wy&j¶cie"
-
-#: kpaint.cpp:327
-msgid "Copy Region"
-msgstr "Kopiuj obszar"
-
-#: kpaint.cpp:328
-msgid "Cut Region"
-msgstr "Wytnij obszar"
-
-#: kpaint.cpp:329
-msgid "Paste Region"
-msgstr "Wklej obszar"
-
-#: kpaint.cpp:330
-msgid "Paste As Image"
-msgstr "Wklej jako obraz"
-
-#: kpaint.cpp:334
-msgid "Mask..."
-msgstr "Maska..."
-
-#: kpaint.cpp:337
-msgid "Information..."
-msgstr "Informacje..."
-
-#: kpaint.cpp:338
-msgid "Resize..."
-msgstr "Zmieñ rozmiar..."
-
-#: kpaint.cpp:339
-msgid "Edit Palette..."
-msgstr "Edytuj paletê..."
-
-#: kpaint.cpp:340
-msgid "Change Colour Depth..."
-msgstr "Zmieñ g³êbiê kolorów..."
-
-#: kpaint.cpp:343
-msgid "Tool Properties..."
-msgstr "W³a¶ciwo¶ci narzêdzi..."
-
-#: kpaint.cpp:345 pen.cpp:17
-msgid "Pen"
-msgstr "Piórko"
-
-#: kpaint.cpp:346 line.cpp:19
-msgid "Line"
-msgstr "Linia"
-
-#: kpaint.cpp:347 rectangle.cpp:17
-msgid "Rectangle"
-msgstr "Prostok±t"
-
-#: kpaint.cpp:350 spraycan.cpp:19
-msgid "Spray Can"
-msgstr "Spray"
-
-#: kpaint.cpp:351
-msgid "Area Select"
-msgstr "Zaznacz obszar"
-
-#: kpaint.cpp:352
-msgid "Round Angle"
-msgstr "Prostok±t o zaokr±glonych rogach"
-
-#: kpaint.cpp:357
-#, fuzzy
-msgid "Show Tools Toolbar"
-msgstr "Poka¿ pasek zadañ"
-
-#: kpaint.cpp:358
-#, fuzzy
-msgid "Show Commands Toolbar"
-msgstr "Poka¿ pasek zadañ"
-
-#: kpaint.cpp:359
-msgid "Show Status Bar"
-msgstr "Poka¿ pasek stanu"
-
-#: kpaint.cpp:360
-msgid "Save Options"
-msgstr "Zachowaj opcje"
-
-#: kpaint.cpp:369
-msgid "KPaint"
-msgstr "KPaint"
-
-#: kpaint.cpp:371
-msgid ""
-"\n"
-"\n"
-"(c) "
-msgstr ""
-"\n"
-"\n"
-"(c) "
-
-#: kpaint.cpp:380
-msgid "&Image"
-msgstr "&Obraz"
-
-#: kpaint.cpp:381
-msgid "&Tool"
-msgstr "&Narzêdzia"
-
-#: kpaint.cpp:533
-msgid "KPaint: Could not open file"
-msgstr "KPaint: Nie mo¿na otworzyæ pliku"
-
-#: kpaint.cpp:534
-msgid ""
-"Error: Could not open file\n"
-"KPaint could not open the specified file."
-msgstr ""
-"B³±d: Nie mo¿na otworzyæ pliku\n"
-"KPaint nie mo¿e otworzyæ wybranego pliku."
-
-#: kpaint.cpp:542
-msgid "KPaint: Unknown Format"
-msgstr "KPaint: Nieznany format"
-
-#: kpaint.cpp:543
-#, fuzzy
-msgid ""
-"Error: Unknown Format\n"
-"KPaint does not understand the format of the specified file\n"
-"or the file is corrupt."
-msgstr ""
-"B³±d: Nieznany format\n"
-"KPaint nie rozpozna³ formatu lub plik jest uszkodzony."
-
-#: kpaint.cpp:745
-msgid "Open Location:"
-msgstr "Otwórz lokacjê:"
-
-#: kpaint.cpp:769
-msgid "Save to Location:"
-msgstr "Zapisz do lokacji:"
-
-#: manager.cpp:69
-msgid "Tool Properties"
-msgstr "W³a¶ciwo¶ci narzêdzi"
+#: infodialog.cpp:94 palettedialog.cpp:14
+msgid "Dismiss"
+msgstr "Wycofaj"
 
 #: palette.cpp:100
 msgid "Edit Colour"
 msgstr "Edytuj kolor"
+
+#: formatdialog.cpp:21
+msgid "File Format:"
+msgstr "Format pliku:"
+
+#: canvassize.cpp:16
+msgid "Canvas Size"
+msgstr "Rozmiar obrazu"
+
+#: canvassize.cpp:25
+#, fuzzy
+msgid "Width:"
+msgstr "Szeroko¶æ:"
+
+#: canvassize.cpp:26
+#, fuzzy
+msgid "Height:"
+msgstr "Wysoko¶æ:"
 
 #: properties.cpp:21
 msgid "Line Properties"
@@ -405,6 +388,27 @@ msgstr "Styl ³±czenia:"
 msgid "Set Line Colour..."
 msgstr "Kolor &linii..."
 
+#: areaselect.cpp:17
+msgid "Area Selection"
+msgstr "Zaznaczony obszar"
+
+#: depthdialog.cpp:18
+#, fuzzy
+msgid "Image Depth:"
+msgstr "G³êboko¶æ obrazu:"
+
+#: depthdialog.cpp:24
+msgid "1 (Bitmap)"
+msgstr "1 (Monochromatyczny)"
+
+#: depthdialog.cpp:25
+msgid "8 (256 Colour)"
+msgstr "8 (256 kolorów)"
+
+#: depthdialog.cpp:26
+msgid "24 (True Colour)"
+msgstr "24 (True Colour)"
+
 #: roundangle.cpp:19
 #, fuzzy
 msgid "Roundangle"
@@ -415,9 +419,6 @@ msgstr "Prostok±t"
 
 #~ msgid "None"
 #~ msgstr "Brak"
-
-#~ msgid "Dismiss"
-#~ msgstr "Wycofaj"
 
 #~ msgid "KPaint: Malformed URL"
 #~ msgstr "KPaint: URL formularza"
