--- a/po/sv/kdvi.po
+++ b/po/sv/kdvi.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 1998-06-18 22:44+0200\n"
+"POT-Creation-Date: 1998-10-01 13:38+0200\n"
 "PO-Revision-Date: 1998-08-23 00:07+SET\n"
 "Last-Translator: Christer Gustavsson <f93-cgn@sm.luth.se>\n"
 "Language-Team: SWEDISH <LL@li.org>\n"
@@ -9,11 +9,14 @@ msgstr ""
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: ENCODING\n"
 
+# dviwin.cpp:216 dviwin.cpp:232 dviwin.cpp:246 dviwin.cpp:283 dviwin.cpp:300
+# kdvi.cpp:514
 #: dviwin.cpp:216 dviwin.cpp:232 dviwin.cpp:246 dviwin.cpp:283 dviwin.cpp:300
-#: kdvi.cpp:514
+#: kdvi.cpp:516
 msgid "Notice"
 msgstr "Observera"
 
+# dviwin.cpp:217
 #: dviwin.cpp:217
 msgid ""
 "The change in font generation will be effective\n"
@@ -22,6 +25,7 @@ msgstr ""
 "Du måste starta om kdvi för att ändringen för\n"
 "generation av typsnitt ska genomföras!"
 
+# dviwin.cpp:233
 #: dviwin.cpp:233
 msgid ""
 "The change in font path will be effective\n"
@@ -30,6 +34,7 @@ msgstr ""
 "Du måste starta om kdvi för att ändringen av\n"
 "sökvägen för typsnitt ska genomföras!"
 
+# dviwin.cpp:247
 #: dviwin.cpp:247
 msgid ""
 "The change in Metafont mode will be effective\n"
@@ -37,8 +42,8 @@ msgid ""
 msgstr ""
 "Du måste starta om kdvi för att ändringen av\n"
 "metatypsnitt ska genomföras!"
-""
 
+# dviwin.cpp:284
 #: dviwin.cpp:284
 msgid ""
 "The change in resolution will be effective\n"
@@ -47,6 +52,7 @@ msgstr ""
 "Du måste starta om kdvi för att ändringen av\n"
 "upplösning ska genomföras!"
 
+# dviwin.cpp:301
 #: dviwin.cpp:301
 msgid ""
 "The change in gamma will be effective\n"
@@ -55,123 +61,153 @@ msgstr ""
 "Du måste starta om kdvi för att ändringen av\n"
 "gamma korrektion ska genomföras!"
 
+# dviwin.cpp:424 dviwin.cpp:458
 #: dviwin.cpp:424 dviwin.cpp:458
 msgid "HEY"
 msgstr "Oj då"
 
+# dviwin.cpp:425 dviwin.cpp:459
 #: dviwin.cpp:425 dviwin.cpp:459
 msgid "What's this? DVI problem!\n"
 msgstr "Vad är detta? DVI problem!\n"
 
-#: kdvi.cpp:92
+# kdvi.cpp:92
+#: kdvi.cpp:95
 msgid "No document"
 msgstr "Inget dokument"
 
-#: kdvi.cpp:108
+# kdvi.cpp:108
+#: kdvi.cpp:111
 msgid "Toggle Menubar"
 msgstr "Menyrad på/av"
 
-#: kdvi.cpp:110
+# kdvi.cpp:110
+#: kdvi.cpp:113
 msgid "Mark page"
 msgstr "Markera sida"
 
-#: kdvi.cpp:112
+# kdvi.cpp:112
+#: kdvi.cpp:115
 msgid "Redraw"
 msgstr "Uppdatera"
 
-#: kdvi.cpp:114
+# kdvi.cpp:114
+#: kdvi.cpp:117
 msgid "Preferences ..."
 msgstr "Inställningar ..."
 
-#: kdvi.cpp:173
+# kdvi.cpp:173
+#: kdvi.cpp:176
 msgid "&Open ..."
 msgstr "&Öppna ..."
 
-#: kdvi.cpp:180
+# kdvi.cpp:180
+#: kdvi.cpp:183
 msgid "Open &recent"
 msgstr "Öppna &senaste"
 
-#: kdvi.cpp:182
+# kdvi.cpp:182
+#: kdvi.cpp:185
 msgid "&Print ..."
 msgstr "S&kriv ut ..."
 
-#: kdvi.cpp:190
+# kdvi.cpp:190
+#: kdvi.cpp:193
 msgid "Zoom &in"
 msgstr "Zooma &in"
 
-#: kdvi.cpp:191
+# kdvi.cpp:191
+#: kdvi.cpp:194
 msgid "Zoom &out"
 msgstr "Zooma &ut"
 
-#: kdvi.cpp:192
+# kdvi.cpp:192
+#: kdvi.cpp:195
 msgid "&Fit to page"
 msgstr "&Anpassa till sida"
 
-#: kdvi.cpp:193
+# kdvi.cpp:193
+#: kdvi.cpp:196
 msgid "Fit to page &width"
 msgstr "Anpassa till sid&bredd"
 
-#: kdvi.cpp:195
+# kdvi.cpp:195
+#: kdvi.cpp:198
 msgid "&Redraw page"
 msgstr "U&ppdatera sida"
 
-#: kdvi.cpp:204
+# kdvi.cpp:204
+#: kdvi.cpp:207
 msgid "&First"
 msgstr "&Första"
 
-#: kdvi.cpp:205
+# kdvi.cpp:205
+#: kdvi.cpp:208
 msgid "&Last"
 msgstr "&Sista"
 
-#: kdvi.cpp:206
+# kdvi.cpp:206
+#: kdvi.cpp:209
 msgid "&Go to ..."
 msgstr "&Gå till ..."
 
-#: kdvi.cpp:209
+# kdvi.cpp:209
+#: kdvi.cpp:212
 msgid "&Page"
 msgstr "&Sida"
 
-#: kdvi.cpp:214
+# kdvi.cpp:214
+#: kdvi.cpp:217
 msgid "&Preferences ..."
 msgstr "&Inställningar ..."
 
-#: kdvi.cpp:215
+# kdvi.cpp:215
+#: kdvi.cpp:218
 msgid "&Keys ..."
 msgstr "&Tangenter ..."
 
-#: kdvi.cpp:217
+# kdvi.cpp:217
+#: kdvi.cpp:220
 msgid "Make PK-&fonts"
 msgstr "Gör PK-t&ypsnitt"
 
-#: kdvi.cpp:219
+# kdvi.cpp:219
+#: kdvi.cpp:222
 msgid "Show PS"
 msgstr "Visa PS"
 
-#: kdvi.cpp:221
+# kdvi.cpp:221
+#: kdvi.cpp:224
 msgid "Show &Menubar"
 msgstr "Visa &menyrad"
 
-#: kdvi.cpp:223
+# kdvi.cpp:223
+#: kdvi.cpp:226
 msgid "Show &Buttons"
 msgstr "Visa &verktygsrad"
 
-#: kdvi.cpp:225
+# kdvi.cpp:225
+#: kdvi.cpp:228
 msgid "Show Page Lis&t"
 msgstr "Visa sid&lista"
 
-#: kdvi.cpp:227
+# kdvi.cpp:227
+#: kdvi.cpp:230
 msgid "Show &Statusbar"
 msgstr "Visa &statusrad"
 
-#: kdvi.cpp:229
+# kdvi.cpp:229
+#: kdvi.cpp:232
 msgid "Show Scro&llbars"
 msgstr "Visa &rullningslist"
 
-#: kdvi.cpp:238
+# kdvi.cpp:238
+#: kdvi.cpp:241
 msgid "DVI Viewer"
 msgstr "DVI Visare"
 
-#: kdvi.cpp:240
+# kdvi.cpp:240
+#: kdvi.cpp:243
 msgid ""
 "\n"
 "\n"
@@ -181,490 +217,612 @@ msgstr ""
 "\n"
 "av Markku Hihnala"
 
-#: kdvi.cpp:260
+# kdvi.cpp:260
+#: kdvi.cpp:263
 msgid "Open document ..."
 msgstr "Öppna dokument ..."
 
-#: kdvi.cpp:261
+# kdvi.cpp:261
+#: kdvi.cpp:264
 msgid "Reload document"
 msgstr "Uppdatera document"
 
-#: kdvi.cpp:262
+# kdvi.cpp:262
+#: kdvi.cpp:265
 msgid "Print ..."
 msgstr "Skriv ut ..."
 
-#: kdvi.cpp:264
+# kdvi.cpp:264
+#: kdvi.cpp:267
 msgid "Go to first page"
 msgstr "Gå till första sidan"
 
-#: kdvi.cpp:265
+# kdvi.cpp:265
+#: kdvi.cpp:268
 msgid "Go to previous page"
 msgstr "Gå till föregående sida"
 
-#: kdvi.cpp:266
+# kdvi.cpp:266
+#: kdvi.cpp:269
 msgid "Go down then top of next page"
 msgstr "Gå ned och därefter till toppen av nästa sida"
 
-#: kdvi.cpp:267
+# kdvi.cpp:267
+#: kdvi.cpp:270
 msgid "Go to next page"
 msgstr "Gå till nästa sida"
 
-#: kdvi.cpp:268
+# kdvi.cpp:268
+#: kdvi.cpp:271
 msgid "Go to last page"
 msgstr "Gå till sista sidan"
 
-#: kdvi.cpp:270
+# kdvi.cpp:270
+#: kdvi.cpp:273
 msgid "Decrease magnification"
 msgstr "Öka förstoring"
 
-#: kdvi.cpp:271
+# kdvi.cpp:271
+#: kdvi.cpp:274
 msgid "Small text"
 msgstr "Liten text"
 
-#: kdvi.cpp:272
+# kdvi.cpp:272
+#: kdvi.cpp:275
 msgid "Large text"
 msgstr "Stor text"
 
-#: kdvi.cpp:273
+# kdvi.cpp:273
+#: kdvi.cpp:276
 msgid "Increase magnification"
 msgstr "Minska förstoring"
 
-#: kdvi.cpp:298
+# kdvi.cpp:298
+#: kdvi.cpp:301
 msgid "Scroll window and switch the page"
 msgstr "Panorera och byt sida"
 
-#: kdvi.cpp:307
+# kdvi.cpp:307
+#: kdvi.cpp:310
 msgid "Select page and mark pages for printing"
 msgstr "Välj sida och markera sidor för utskrift"
 
-#: kdvi.cpp:322
+# kdvi.cpp:322
+#: kdvi.cpp:325
 msgid "X:0000, Y:0000 "
 msgstr "X:0000, Y:0000 "
 
-#: kdvi.cpp:324
+# kdvi.cpp:324
+#: kdvi.cpp:327
 msgid "Shrink: xx"
 msgstr "Krymp: xx"
 
-#: kdvi.cpp:326
+# kdvi.cpp:326
+#: kdvi.cpp:329
 msgid "Page: xxxx / xxxx"
 msgstr "Sida: xxxx / xxxx"
 
-#: kdvi.cpp:343 kdvi.cpp:395
+# kdvi.cpp:343 kdvi.cpp:395
+#: kdvi.cpp:344 kdvi.cpp:397
 msgid "New window"
 msgstr "Nytt fönster"
 
-#: kdvi.cpp:344 kdvi.cpp:396
+# kdvi.cpp:344 kdvi.cpp:396
+#: kdvi.cpp:345 kdvi.cpp:398
 msgid "Open file"
 msgstr "Öppna fil"
 
-#: kdvi.cpp:345 kdvi.cpp:397
+# kdvi.cpp:345 kdvi.cpp:397
+#: kdvi.cpp:346 kdvi.cpp:399
 msgid "Print dialog"
 msgstr "Utskrifts dialog"
 
-#: kdvi.cpp:347 kdvi.cpp:399
+# kdvi.cpp:347 kdvi.cpp:399
+#: kdvi.cpp:348 kdvi.cpp:401
 msgid "Zoom in"
 msgstr "Zooma in"
 
-#: kdvi.cpp:348 kdvi.cpp:400
+# kdvi.cpp:348 kdvi.cpp:400
+#: kdvi.cpp:349 kdvi.cpp:402
 msgid "Zoom out"
 msgstr "Zooma ut"
 
-#: kdvi.cpp:349 kdvi.cpp:401
+# kdvi.cpp:349 kdvi.cpp:401
+#: kdvi.cpp:350 kdvi.cpp:403
 msgid "Fit window"
 msgstr "Tillpassa fönster"
 
-#: kdvi.cpp:350 kdvi.cpp:402
+# kdvi.cpp:350 kdvi.cpp:402
+#: kdvi.cpp:351 kdvi.cpp:404
 msgid "Fit width"
 msgstr "Tillpassa bredd"
 
-#: kdvi.cpp:351 kdvi.cpp:403
+# kdvi.cpp:351 kdvi.cpp:403
+#: kdvi.cpp:352 kdvi.cpp:405
 msgid "Redraw page"
 msgstr "Uppdatera sida"
 
-#: kdvi.cpp:352 kdvi.cpp:405
+# kdvi.cpp:352 kdvi.cpp:405
+#: kdvi.cpp:353 kdvi.cpp:407
 msgid "Next page"
 msgstr "Nästa sida"
 
-#: kdvi.cpp:353 kdvi.cpp:404
+# kdvi.cpp:353 kdvi.cpp:404
+#: kdvi.cpp:354 kdvi.cpp:406
 msgid "Previous page"
 msgstr "Föregående sida"
 
-#: kdvi.cpp:354 kdvi.cpp:407
+# kdvi.cpp:354 kdvi.cpp:407
+#: kdvi.cpp:355 kdvi.cpp:409
 msgid "Last page"
 msgstr "Sista sidan"
 
-#: kdvi.cpp:355 kdvi.cpp:406
+# kdvi.cpp:355 kdvi.cpp:406
+#: kdvi.cpp:356 kdvi.cpp:408
 msgid "First page"
 msgstr "Första sidan"
 
-#: kdvi.cpp:356 kdvi.cpp:408
+# kdvi.cpp:356 kdvi.cpp:408
+#: kdvi.cpp:357 kdvi.cpp:410
 msgid "Goto page"
 msgstr "Gå till sida"
 
-#: kdvi.cpp:357
+# kdvi.cpp:357
+#: kdvi.cpp:358
 msgid "Configure keys"
 msgstr "Konfigurera tangenter"
 
-#: kdvi.cpp:358 kdvi.cpp:409
+# kdvi.cpp:358 kdvi.cpp:409
+#: kdvi.cpp:359 kdvi.cpp:411
 msgid "Toggle show PS"
 msgstr "Visa PS på/av"
 
-#: kdvi.cpp:359 kdvi.cpp:410
+# kdvi.cpp:359 kdvi.cpp:410
+#: kdvi.cpp:360 kdvi.cpp:412
 msgid "Toggle menu bar"
 msgstr "Visa menyrad på/av"
 
-#: kdvi.cpp:360 kdvi.cpp:411
+# kdvi.cpp:360 kdvi.cpp:411
+#: kdvi.cpp:361 kdvi.cpp:413
 msgid "Toggle button bar"
 msgstr "Visa verktygsrad på/av"
 
-#: kdvi.cpp:361 kdvi.cpp:412
+# kdvi.cpp:361 kdvi.cpp:412
+#: kdvi.cpp:362 kdvi.cpp:414
 msgid "Toggle page list"
 msgstr "Sidlista på/av"
 
-#: kdvi.cpp:362 kdvi.cpp:413
+# kdvi.cpp:362 kdvi.cpp:413
+#: kdvi.cpp:363 kdvi.cpp:415
 msgid "Toggle status bar"
 msgstr "Statusfält på/av"
 
-#: kdvi.cpp:363 kdvi.cpp:414
+# kdvi.cpp:363 kdvi.cpp:414
+#: kdvi.cpp:364 kdvi.cpp:416
 msgid "Toggle scroll bars"
 msgstr "Rullningslist på/av"
 
-#: kdvi.cpp:466
+# kdvi.cpp:466
+#: kdvi.cpp:468
 msgid "File open dialog is open"
 msgstr "Dialogrutan för öppna fil är öppen"
 
-#: kdvi.cpp:515
+# kdvi.cpp:515
+#: kdvi.cpp:517
 msgid "Can't read file:\n"
 msgstr "Kan inte skapa fil:\n"
 
-#: kdvi.cpp:521
+# kdvi.cpp:521
+#: kdvi.cpp:523
 msgid "Opening "
 msgstr "Öppnar"
 
-#: kdvi.cpp:546
+# kdvi.cpp:546
+#: kdvi.cpp:548
 msgid "Opened "
 msgstr "Öppnade"
 
-#: kdvi.cpp:556
+# kdvi.cpp:556
+#: kdvi.cpp:558
 msgid "Print dialog is open"
 msgstr "Dialogrutan för utskrift är öppen"
 
-#: kdvi.cpp:571
+# kdvi.cpp:571
+#: kdvi.cpp:573
 msgid "View size fits page"
 msgstr "Visa storlek tillpassar sidan"
 
-#: kdvi.cpp:580
+# kdvi.cpp:580
+#: kdvi.cpp:582
 msgid "View width fits page"
 msgstr "Visa bredd tillpassar sidan"
 
-#: kdvi.cpp:672
+# kdvi.cpp:672
+#: kdvi.cpp:674
 msgid "Preferences applied"
 msgstr "Inställningar aktiverade"
 
-#: kdvi.cpp:676
+# kdvi.cpp:676
+#: kdvi.cpp:678
 msgid " Page "
 msgstr " Sida"
 
-#: kdvi.cpp:678
+# kdvi.cpp:678
+#: kdvi.cpp:680
 msgid "Go to page"
 msgstr "Gå till sida"
 
-#: kdvi.cpp:692
+# kdvi.cpp:692
+#: kdvi.cpp:694
 msgid "Go to"
 msgstr "Gå till"
 
-#: kdvi.cpp:713
+# kdvi.cpp:713
+#: kdvi.cpp:715
 msgid "Missing PK-fonts will be generated"
 msgstr "Saknade PK-typsnitt kommer att genereras"
 
-#: kdvi.cpp:714
+# kdvi.cpp:714
+#: kdvi.cpp:716
 msgid "Missing PK-fonts will be logged to 'missfont.log'"
 msgstr "Saknade PK-typsnitt kommer att loggas till 'missfont.log'"
 
-#: kdvi.cpp:730
+# kdvi.cpp:730
+#: kdvi.cpp:732
 msgid "Postcsript specials are rendered"
 msgstr "Postscript specialiteter är tolkade"
 
-#: kdvi.cpp:731
+# kdvi.cpp:731
+#: kdvi.cpp:733
 msgid "Postscript specials are not rendered"
 msgstr "Postscript specialiteter är inte tolkade"
 
-#: kdvi.cpp:747
+# kdvi.cpp:747
+#: kdvi.cpp:749
 msgid "No menu bar"
 msgstr "Ingen menyrad"
 
-#: kdvi.cpp:747
+# kdvi.cpp:747
+#: kdvi.cpp:749
 msgid "Menu bar is shown"
 msgstr "Menyrad är synlig"
 
-#: kdvi.cpp:765
+# kdvi.cpp:765
+#: kdvi.cpp:767
 msgid "No button bar"
 msgstr "Ingen verktygsrad"
 
-#: kdvi.cpp:765
+# kdvi.cpp:765
+#: kdvi.cpp:767
 msgid "Button bar is shown"
 msgstr "Verktygsrad är synlig"
 
-#: kdvi.cpp:779
+# kdvi.cpp:779
+#: kdvi.cpp:781
 msgid "Tool bar is shown"
 msgstr "Sidlista är synlig"
 
-#: kdvi.cpp:779
+# kdvi.cpp:779
+#: kdvi.cpp:781
 msgid "No tool bar"
 msgstr "Ingen sidlista"
 
-#: kdvi.cpp:803
+# kdvi.cpp:803
+#: kdvi.cpp:805
 msgid "No status bar"
 msgstr "Ingen statusrad"
 
-#: kdvi.cpp:803
+# kdvi.cpp:803
+#: kdvi.cpp:805
 msgid "Status bar is shown"
 msgstr "Statusrad är synlig"
 
-#: kdvi.cpp:817
+# kdvi.cpp:817
+#: kdvi.cpp:819
 msgid "Scroll bars are shown"
 msgstr "Rullningslist är synlig"
 
-#: kdvi.cpp:817
+# kdvi.cpp:817
+#: kdvi.cpp:819
 msgid "No scroll bars"
 msgstr "Ingen rullningslist"
 
-#: kdvi.cpp:874
+# kdvi.cpp:874
+#: kdvi.cpp:876
 msgid "Page: "
 msgstr "Sida: "
 
-#: kdvi.cpp:874
+# kdvi.cpp:874
+#: kdvi.cpp:876
 msgid " / "
 msgstr " / "
 
-#: kdvi.cpp:905
+# kdvi.cpp:905
+#: kdvi.cpp:907
 msgid "Large text button set to shrink factor "
 msgstr "Knappen för stor text satt att förstora"
 
-#: kdvi.cpp:913
+# kdvi.cpp:913
+#: kdvi.cpp:915
 msgid "Small text button set to shrink factor "
 msgstr "Knappen för liten text satt att förminska"
 
-#: kdvi.cpp:937
+# kdvi.cpp:937
+#: kdvi.cpp:939
 msgid "File reloaded"
 msgstr "Uppdaterad fil"
 
+# marklist.cpp:38
 #: marklist.cpp:38
 msgid "Mark current"
 msgstr "Markera nuvarande"
 
+# marklist.cpp:39
 #: marklist.cpp:39
 msgid "Unmark current"
 msgstr "Avmarkera nuvarande"
 
+# marklist.cpp:40
 #: marklist.cpp:40
 msgid "Mark all"
 msgstr "Markera alla"
 
+# marklist.cpp:41
 #: marklist.cpp:41
 msgid "Mark even"
 msgstr "Markera jämna"
 
+# marklist.cpp:42
 #: marklist.cpp:42
 msgid "Mark odd"
 msgstr "Markera udda"
 
+# marklist.cpp:43
 #: marklist.cpp:43
 msgid "Toggle marks"
 msgstr "Markering på/av"
 
+# marklist.cpp:44
 #: marklist.cpp:44
 msgid "Remove marks"
 msgstr "Ta bort markeringar"
 
+# prefs.cpp:46
 #: prefs.cpp:46
 msgid "Preferences"
 msgstr "Inställningar"
 
+# prefs.cpp:214
 #: prefs.cpp:214
 msgid "Menu Bar"
 msgstr "Menyrad"
 
+# prefs.cpp:215
 #: prefs.cpp:215
 msgid "Button Bar"
 msgstr "Verktygsrad"
 
+# prefs.cpp:216
 #: prefs.cpp:216
 msgid "Status Bar"
 msgstr "Statusrad"
 
+# prefs.cpp:217
 #: prefs.cpp:217
 msgid "Page List"
 msgstr "Sidlista"
 
+# prefs.cpp:218
 #: prefs.cpp:218
 msgid "Scroll Bars"
 msgstr "Rullningslist"
 
+# prefs.cpp:240
 #: prefs.cpp:240
 msgid "Number of recent files"
 msgstr "Antal senaste filer"
 
+# prefs.cpp:261
 #: prefs.cpp:261
 msgid "Generate missing fonts"
 msgstr "Generera saknade typsnitt"
 
+# prefs.cpp:278
 #: prefs.cpp:278
 msgid "Resolution"
 msgstr "Upplösning"
 
+# prefs.cpp:283
 #: prefs.cpp:283
 msgid "Metafont mode"
 msgstr "Metatypsnitt"
 
+# prefs.cpp:292
 #: prefs.cpp:292
 msgid "PK Font Path"
 msgstr "Sökväg för PK-typsnitt"
 
+# prefs.cpp:301
 #: prefs.cpp:301
 msgid "Shrink factor for small text"
 msgstr "Krympfaktor för knappen Liten text"
 
+# prefs.cpp:306
 #: prefs.cpp:306
 msgid "Shrink factor for large text"
 msgstr "Förstoringsfaktor för knappen Stor text"
 
+# prefs.cpp:326
 #: prefs.cpp:326
 msgid "Show postscript specials"
 msgstr "Visa postscript scecialiteter"
 
+# prefs.cpp:327
 #: prefs.cpp:327
 msgid "Antialiased postcript"
 msgstr "Antialiased postcript"
 
+# prefs.cpp:345
 #: prefs.cpp:345
 msgid "Gamma"
 msgstr "Gamma"
 
+# prefs.cpp:358
 #: prefs.cpp:358
 msgid "Rendering"
 msgstr "Återgivning"
 
+# prefs.cpp:388
 #: prefs.cpp:388
 msgid "Paper"
 msgstr "Papper"
 
+# print.cpp:63
 #: print.cpp:63
 msgid "Print "
 msgstr "Skriv ut"
 
+# print.cpp:122
 #: print.cpp:122
 msgid "Cannot open dvi file!"
 msgstr "Kan inte öppna dvi fil!"
 
+# print.cpp:126
 #: print.cpp:126
 msgid "Cannot open output dvi file!"
 msgstr "Kan inte öppna output-dvi fil!"
 
+# print.cpp:138
 #: print.cpp:138
 msgid "Cannot handle this dvi version!"
 msgstr "Kan inte hantera denna dvi-version!"
 
+# print.cpp:243
 #: print.cpp:243
 msgid "Invalid page range!"
 msgstr "Ogiltigt sidintervall!"
 
+# print.cpp:320 printSetup.cpp:74
 #: print.cpp:320 printSetup.cpp:74
 msgid "Default Printer"
 msgstr "Standardskrivare"
 
+# printData.cpp:32
 #: printData.cpp:32
 msgid "&File Name:"
 msgstr "&Fil namn:"
 
+# printData.cpp:59
 #: printData.cpp:59
 msgid "&All"
 msgstr "&Alla"
 
+# printData.cpp:66
 #: printData.cpp:66
 msgid "&Current"
 msgstr "&Nuvarande"
 
+# printData.cpp:72
 #: printData.cpp:72
 msgid "&Marked"
 msgstr "&Markerade"
 
+# printData.cpp:79
 #: printData.cpp:79
 msgid "&Range"
 msgstr "&Sidintervall"
 
+# printData.cpp:99
 #: printData.cpp:99
 msgid "Re&verse"
 msgstr "Om&vänd"
 
+# printData.cpp:108
 #: printData.cpp:108
 msgid "1 page on sheet"
 msgstr "1 sida per ark"
 
+# printData.cpp:109
 #: printData.cpp:109
 msgid "2 pages on sheet"
 msgstr "2 sidor per ark"
 
+# printData.cpp:110
 #: printData.cpp:110
 msgid "4 pages on sheet"
 msgstr "4 sidor per ark"
 
+# printData.cpp:116
 #: printData.cpp:116
 msgid "Fill rows"
 msgstr "Fyll rader"
 
+# printData.cpp:117
 #: printData.cpp:117
 msgid "Fill columns"
 msgstr "Fyll kolumner"
 
+# printData.cpp:129
 #: printData.cpp:129
 msgid "&Setup"
 msgstr "&Inställningar"
 
+# printData.cpp:144
 #: printData.cpp:144
 msgid "Page order"
 msgstr "Sidordning"
 
+# printData.cpp:152
 #: printData.cpp:152
 msgid "Pages"
 msgstr "Sidor"
 
+# printData.cpp:164
 #: printData.cpp:164
 msgid "Print to"
 msgstr "Skriv till"
 
+# printSetup.cpp:24
 #: printSetup.cpp:24
 msgid "Print Setup"
 msgstr "Skrivarinställning"
 
+# printSetupData.cpp:43
 #: printSetupData.cpp:43
 msgid "Printers"
 msgstr "Skrivare"
 
+# printSetupData.cpp:48
 #: printSetupData.cpp:48
 msgid "&Internal"
 msgstr "&Intern"
 
+# printSetupData.cpp:66
 #: printSetupData.cpp:66
 msgid "Use ps&nup"
 msgstr "Använd ps&nup"
 
+# printSetupData.cpp:72
 #: printSetupData.cpp:72
 msgid "Use &mpage"
 msgstr "Använd &mpage"
 
+# printSetupData.cpp:92
 #: printSetupData.cpp:92
 msgid "&Add"
 msgstr "&Lägg till"
 
+# printSetupData.cpp:120
 #: printSetupData.cpp:120
 msgid "&Spooler command:"
 msgstr "&Spooler-kommando:"
 
+# printSetupData.cpp:128
 #: printSetupData.cpp:128
 msgid "n-up"
 msgstr "n-upp"
 
+# printSetupData.cpp:137
 #: printSetupData.cpp:137
 msgid "Printing method"
 msgstr "Utskriftsmetod"
