--- a/po/zh_TW.Big5/kfax.po
+++ b/po/zh_TW.Big5/kfax.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 1998-05-30 17:41+0200\n"
+"POT-Creation-Date: 1998-10-01 13:38+0200\n"
 "PO-Revision-Date: 1998-06-30 16:30+0000\n"
 "Last-Translator: Yu-Ting Kuo <beta2000@yahoo.com>\n"
 "Language-Team: BIG-5 Chinese <LL@li.org>\n"
@@ -14,171 +14,183 @@ msgstr ""
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: ENCODING\n"
 
-#: about.cpp:39
-msgid "About KFax"
-msgstr "關於 KFax"
-
-#: about.cpp:58
-msgid "Version "
-msgstr "版本 "
-
-#: kfax.cpp:222 kfax.cpp:820
+# kfax.cpp:222 kfax.cpp:820
+#: kfax.cpp:233 kfax.cpp:828
 msgid "Show &Tool Bar"
 msgstr "顯示工具列[&T]"
 
-#: kfax.cpp:224 kfax.cpp:813
+# kfax.cpp:224 kfax.cpp:813
+#: kfax.cpp:235 kfax.cpp:821
 msgid "Hide &Tool Bar"
 msgstr "隱藏工具列[&T]"
 
-#: kfax.cpp:227 kfax.cpp:793
+# kfax.cpp:227 kfax.cpp:793
+#: kfax.cpp:238 kfax.cpp:801
 msgid "Show &Status Bar"
 msgstr "顯示狀態列[&S]"
 
-#: kfax.cpp:229 kfax.cpp:786
+# kfax.cpp:229 kfax.cpp:786
+#: kfax.cpp:240 kfax.cpp:794
 msgid "Hide &Status Bar"
 msgstr "隱藏狀態列[&S]"
 
-#: kfax.cpp:380
-msgid "&About..."
-msgstr "有關[&A] ..."
-
-#: kfax.cpp:381
+# kfax.cpp:381
+#: kfax.cpp:403
 msgid "Help page"
 msgstr "說明頁"
 
-#: kfax.cpp:382
-msgid "KFax &Help "
-msgstr "KFax 說明[&H]"
-
-#: kfax.cpp:384
+# kfax.cpp:384
+#: kfax.cpp:405
 msgid "&Open Fax..."
 msgstr "打開傳真文件[&O]..."
 
-#: kfax.cpp:385
+# kfax.cpp:385
+#: kfax.cpp:406
 msgid "&Add Fax..."
 msgstr "新增傳真[&A]..."
 
-#: kfax.cpp:388
+# kfax.cpp:388
+#: kfax.cpp:409
 msgid "Open &URL..."
 msgstr "開啟 &URL..."
 
-#: kfax.cpp:389
+# kfax.cpp:389
+#: kfax.cpp:410
 msgid "Save to U&RL..."
 msgstr "存至 U&RL..."
 
-#: kfax.cpp:390
+# kfax.cpp:390
+#: kfax.cpp:411
 msgid "&Close Fax"
 msgstr "關閉傳真文件[&O]..."
 
-#: kfax.cpp:397
+# kfax.cpp:397
+#: kfax.cpp:418
 msgid "&Next Page"
 msgstr "下一頁[&N]"
 
-#: kfax.cpp:398
+# kfax.cpp:398
+#: kfax.cpp:419
 msgid "&Prev Page"
 msgstr "前一頁[&P]"
 
-#: kfax.cpp:399
+# kfax.cpp:399
+#: kfax.cpp:420
 msgid "&First Page"
 msgstr "第一頁[&F]"
 
-#: kfax.cpp:400
+# kfax.cpp:400
+#: kfax.cpp:421
 msgid "&Last Page"
 msgstr "最後一頁[&L]"
 
-#: kfax.cpp:402
+# kfax.cpp:402
+#: kfax.cpp:423
 msgid "&Rotate Page"
 msgstr "旋轉頁面[&R]"
 
-#: kfax.cpp:403
+# kfax.cpp:403
+#: kfax.cpp:424
 msgid "&Mirror Page"
 msgstr "左右鏡射[&M]"
 
-#: kfax.cpp:404
+# kfax.cpp:404
+#: kfax.cpp:425
 msgid "&Flip Page"
 msgstr "上下鏡射[&F]"
 
-#: kfax.cpp:406
+# kfax.cpp:406
+#: kfax.cpp:427
 msgid "Zoom &in"
 msgstr "拉近[I]"
 
-#: kfax.cpp:407
+# kfax.cpp:407
+#: kfax.cpp:428
 msgid "Zoom &out"
 msgstr "拉遠[O]"
 
-#: kfax.cpp:412
+# kfax.cpp:412
+#: kfax.cpp:433
 msgid "&Fax Options"
 msgstr "傳真選項[&F]"
 
-#: kfax.cpp:414
+# kfax.cpp:414
+#: kfax.cpp:435
 msgid "&Tool Bar"
 msgstr "工具列[&T]"
 
-#: kfax.cpp:415
+# kfax.cpp:415
+#: kfax.cpp:436
 msgid "&Status Bar"
 msgstr "狀態列[&S]"
 
-#: kfax.cpp:442
+# kfax.cpp:442
+#: kfax.cpp:463
 msgid "Go back"
 msgstr "往回"
 
-#: kfax.cpp:445
+# kfax.cpp:445
+#: kfax.cpp:466
 msgid "Go forward"
 msgstr "往前"
 
-#: kfax.cpp:450
+# kfax.cpp:450
+#: kfax.cpp:471
 msgid "Go to start"
 msgstr "到開頭"
 
-#: kfax.cpp:453
+# kfax.cpp:453
+#: kfax.cpp:474
 msgid "Go to end"
 msgstr "到結尾"
 
-#: kfax.cpp:459
+# kfax.cpp:459
+#: kfax.cpp:480
 msgid "Zoom in"
 msgstr "拉近"
 
-#: kfax.cpp:462
+# kfax.cpp:462
+#: kfax.cpp:483
 msgid "Zoom out"
 msgstr "拉遠"
 
-#: kfax.cpp:467
+# kfax.cpp:467
+#: kfax.cpp:488
 msgid "Print document"
 msgstr "列印文件"
 
-#: kfax.cpp:476
+# kfax.cpp:476
+#: kfax.cpp:497
 msgid "Go to page ..."
 msgstr "到某一頁..."
 
-#: kfax.cpp:562
+# kfax.cpp:562
+#: kfax.cpp:583
 msgid "Open Location:"
 msgstr "開啟位址:"
 
-#: kfax.cpp:578
+# kfax.cpp:578
+#: kfax.cpp:599
 msgid "You need to open a Fax first"
 msgstr "您得先開啟一份傳真文件"
 
-#: kfax.cpp:584
+# kfax.cpp:584
+#: kfax.cpp:605
 msgid "Save to Location:"
 msgstr "存至位址:"
 
-#: kfax.cpp:625
-msgid "Select Facsimile to Open"
-msgstr "請選取欲開啟的傳真"
-
-#: kfax.cpp:662
-msgid "Select Facsimile to Add"
-msgstr "請選取欲新增的傳真"
-
-#: kfax.cpp:804
+# kfax.cpp:804
+#: kfax.cpp:812
 msgid "Not yet implemented"
 msgstr "尚未完成的功\能"
 
-#: kfax.cpp:854
+# kfax.cpp:854
+#: kfax.cpp:862
 msgid "     There is no document active      "
 msgstr "         沒有使用中的文件             "
 
-#: kfax.cpp:988
+# kfax.cpp:988
+#: kfax.cpp:996
 #, c-format
 msgid ""
 "Invalid page dimensions:\n"
@@ -187,25 +199,30 @@ msgstr ""
 "無效的頁面規格:\n"
 "寬 %.2f 高 %.2f\n"
 
-#: kfax.cpp:1004
+# kfax.cpp:1004
+#: kfax.cpp:1012
 #, c-format
 msgid "Can't print to \"%s\"\n"
 msgstr "無法印到 \"%s\"\n"
 
-#: kfax.cpp:1015
+# kfax.cpp:1015
+#: kfax.cpp:1023
 #, c-format
 msgid "Couldn't create %s\n"
 msgstr "無法建立 %s\n"
 
-#: kfax.cpp:1085
+# kfax.cpp:1085
+#: kfax.cpp:1093
 msgid "Saving ..."
 msgstr "儲存中..."
 
-#: kfax.cpp:1092
+# kfax.cpp:1092
+#: kfax.cpp:1100
 msgid "Loading ..."
 msgstr "載入中..."
 
-#: kfax.cpp:1119 kfax.cpp:1155
+# kfax.cpp:1119 kfax.cpp:1155
+#: kfax.cpp:1127 kfax.cpp:1163
 msgid ""
 "Failure in 'copy file()'\n"
 "Couldn't save file!"
@@ -213,11 +230,13 @@ msgstr ""
 "拷貝檔案 'copy file()' 時發生錯誤\n"
 "無法儲存檔案!"
 
-#: kfax.cpp:1125
+# kfax.cpp:1125
+#: kfax.cpp:1133
 msgid "Saved"
 msgstr "存檔完成"
 
-#: kfax.cpp:1132 kfax.cpp:1194
+# kfax.cpp:1132 kfax.cpp:1194
+#: kfax.cpp:1140 kfax.cpp:1202
 msgid ""
 "KFax is already waiting\n"
 "for an internet job to finish\n"
@@ -226,36 +245,44 @@ msgstr ""
 "KFax 正在等一項 Internet\n"
 "的作業完成，請稍待\n"
 
-#: kfax.cpp:1143 kfax.cpp:1207
+# kfax.cpp:1143 kfax.cpp:1207
+#: kfax.cpp:1151 kfax.cpp:1215
 msgid "Could not communicate with KFM"
 msgstr "無法和 KFM 連絡"
 
-#: kfax.cpp:1184
+# kfax.cpp:1184
+#: kfax.cpp:1192
 #, c-format
 msgid "Loading '%s'"
 msgstr "載入 '%s' 中"
 
-#: kfax.cpp:1201
+# kfax.cpp:1201
+#: kfax.cpp:1209
 msgid "Calling KFM"
 msgstr "呼叫 KFM"
 
-#: kfax.cpp:1214
+# kfax.cpp:1214
+#: kfax.cpp:1222
 msgid "Starting Job"
 msgstr "開始作業"
 
-#: kfax.cpp:1217
+# kfax.cpp:1217
+#: kfax.cpp:1225
 msgid "Connected"
 msgstr "已連線"
 
-#: kfax.cpp:1219
+# kfax.cpp:1219
+#: kfax.cpp:1227
 msgid "Waiting..."
 msgstr "等待中..."
 
-#: kfax.cpp:2070
+# kfax.cpp:2070
+#: kfax.cpp:2078
 msgid "You need to open a fax page first."
 msgstr "您得先開啟一份傳真文件。"
 
-#: kfax.cpp:2740
+# kfax.cpp:2740
+#: kfax.cpp:2748
 msgid ""
 "A file with this name already exists\n"
 "Do you want to overwrite it?\n"
@@ -265,106 +292,67 @@ msgstr ""
 "您想要覆蓋\它嗎?\n"
 "\n"
 
-#: options.cpp:54
-msgid "KFax Options Dialog"
-msgstr "KFax 選項"
-
-#: options.cpp:64
-msgid "Raw Fax Resolution:"
-msgstr "原始的傳真解析度"
-
-#: options.cpp:68 options.cpp:149
-msgid "Auto"
-msgstr "自動"
-
-#: options.cpp:71
-msgid "Fine"
-msgstr "高"
-
-#: options.cpp:81
-msgid "Display Options:"
-msgstr "顯示選項"
-
-#: options.cpp:85
-msgid "Landscape"
-msgstr "橫放紙張"
-
-#: options.cpp:89
-msgid "Upside Down"
-msgstr "上下相反"
-
-#: options.cpp:93
-msgid "Invert"
-msgstr "反白"
-
-#: options.cpp:102
-msgid "Raw Fax Data are:"
-msgstr "原始傳真資料為:"
-
-#: options.cpp:106
-msgid "LS-Bit first"
-msgstr "LS-Bit first"
-
-#: options.cpp:114
-msgid "Raw Facsimili are:"
-msgstr "Raw Facimili are:"
-
-#: options.cpp:135
-msgid "Raw Fax width:"
-msgstr "原始傳真寬度:"
-
-#: options.cpp:142
-msgid "height:"
-msgstr "高度:"
-
+# print.cpp:51
 #: print.cpp:51
 msgid "KFax Print Dialog"
 msgstr "KFax 列印"
 
+# print.cpp:57
 #: print.cpp:57
 msgid "Print as Postscript to Printer"
 msgstr "以 Postscript 列印到印表機"
 
+# print.cpp:62
 #: print.cpp:62
 msgid "Print Command:"
 msgstr "列印指令:"
 
+# print.cpp:71
 #: print.cpp:71
 msgid "Print as Postscript to File:"
 msgstr "以 Postscript 列印到檔案:"
 
+# print.cpp:77
 #: print.cpp:77
 msgid "Browse"
 msgstr "瀏覽"
 
+# print.cpp:86
 #: print.cpp:86
 msgid "Page Size:"
 msgstr "紙張大小"
 
+# print.cpp:105
 #: print.cpp:105
 msgid "Scale fax to page size"
 msgstr "將傳真放到和紙張同大"
 
+# print.cpp:111
 #: print.cpp:111
 msgid "Add Printer Margins (measured in cm):"
 msgstr "加入印表機的邊界 (公分)"
 
+# print.cpp:119
 #: print.cpp:119
 msgid "Horizontal:"
 msgstr "水平"
 
+# print.cpp:128
 #: print.cpp:128
 msgid "Vertical:"
 msgstr "垂直"
 
+# print.cpp:258
 #: print.cpp:258
 msgid "Select Filename"
 msgstr "選擇檔名"
 
+# print.cpp:280
 #: print.cpp:280
 msgid "You must enter a file name if you wish to print to a file."
 msgstr "您一定得輸入一個檔名才能印表到檔案。"
 
+# print.cpp:290
 #: print.cpp:290
 msgid ""
 "You must enter a print command such as \"lpr\"\n"
@@ -373,3 +361,95 @@ msgstr ""
 "如果您想列印到印表機，您得輸入一道指令\n"
 "例如: \"lpr\""
 
+# options.cpp:54
+#: options.cpp:54
+msgid "KFax Options Dialog"
+msgstr "KFax 選項"
+
+# options.cpp:64
+#: options.cpp:64
+msgid "Raw Fax Resolution:"
+msgstr "原始的傳真解析度"
+
+# options.cpp:68 options.cpp:149
+#: options.cpp:68 options.cpp:149
+msgid "Auto"
+msgstr "自動"
+
+# options.cpp:71
+#: options.cpp:71
+msgid "Fine"
+msgstr "高"
+
+#: options.cpp:74
+msgid "Normal"
+msgstr ""
+
+# options.cpp:81
+#: options.cpp:81
+msgid "Display Options:"
+msgstr "顯示選項"
+
+# options.cpp:85
+#: options.cpp:85
+msgid "Landscape"
+msgstr "橫放紙張"
+
+# options.cpp:89
+#: options.cpp:89
+msgid "Upside Down"
+msgstr "上下相反"
+
+# options.cpp:93
+#: options.cpp:93
+msgid "Invert"
+msgstr "反白"
+
+# options.cpp:102
+#: options.cpp:102
+msgid "Raw Fax Data are:"
+msgstr "原始傳真資料為:"
+
+# options.cpp:106
+#: options.cpp:106
+msgid "LS-Bit first"
+msgstr "LS-Bit first"
+
+# options.cpp:114
+#: options.cpp:114
+msgid "Raw Facsimili are:"
+msgstr "Raw Facimili are:"
+
+# options.cpp:135
+#: options.cpp:135
+msgid "Raw Fax width:"
+msgstr "原始傳真寬度:"
+
+# options.cpp:142
+#: options.cpp:142
+msgid "height:"
+msgstr "高度:"
+
+# about.cpp:39
+#~ msgid "About KFax"
+#~ msgstr "關於 KFax"
+
+# about.cpp:58
+#~ msgid "Version "
+#~ msgstr "版本 "
+
+# kfax.cpp:380
+#~ msgid "&About..."
+#~ msgstr "有關[&A] ..."
+
+# kfax.cpp:382
+#~ msgid "KFax &Help "
+#~ msgstr "KFax 說明[&H]"
+
+# kfax.cpp:625
+#~ msgid "Select Facsimile to Open"
+#~ msgstr "請選取欲開啟的傳真"
+
+# kfax.cpp:662
+#~ msgid "Select Facsimile to Add"
+#~ msgstr "請選取欲新增的傳真"
